Upgrade to support Java 17, Handling null polymophic and etc