@@ -5,18 +5,15 @@ import biz.shujutech.base.Connection;
 import biz.shujutech.base.DateAndTime;
 import biz.shujutech.base.Hinderance;
 import biz.shujutech.db.relational.Database;
+import biz.shujutech.db.relational.Database.DbType;
 import biz.shujutech.db.relational.Field;
-import biz.shujutech.db.relational.FieldDate;
-import biz.shujutech.db.relational.FieldDateTime;
 import biz.shujutech.db.relational.FieldType;
 import biz.shujutech.db.relational.Record;
 import biz.shujutech.db.relational.SortOrder;
 import biz.shujutech.db.relational.Table;
-import biz.shujutech.technical.LambdaCounter;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.util.Collections;
-import java.util.GregorianCalendar;
 import java.util.Iterator;
 import java.util.LinkedHashMap;
 import java.util.LinkedList;
@@ -26,33 +23,34 @@ import java.util.Map.Entry;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.CopyOnWriteArrayList;
-import org.joda.time.DateTime;
-import biz.shujutech.technical.Callback2ProcessClasz;
+import biz.shujutech.technical.LambdaGeneric;
+import biz.shujutech.util.Generic;
 import com.google.common.collect.ArrayListMultimap;
 import com.google.common.collect.Multimap;
 import com.google.common.collect.Multimaps;
+import biz.shujutech.technical.Callback2ProcessMember;
 
-public class FieldObjectBox extends FieldClasz {
+public class FieldObjectBox<Ty extends Clasz<?>> extends FieldClasz {
 
-	private ConcurrentHashMap<Long, Clasz> objectMap = new ConcurrentHashMap<>();
-	private Iterator iterator = null;
+	private ConcurrentHashMap<Long, Ty> objectMap = new ConcurrentHashMap<>();
+	private Iterator<Entry<Long, Ty>> iterator = null;
 	private Long key;
-	private Clasz metaObj;
+	private Ty metaObj;
 	private int fetchSize = 5;
 
 	public FieldObjectBox() {
 		this.setAtomic(false);
 	}
 
-	public FieldObjectBox(Clasz aStoreType) throws Exception {
+	public FieldObjectBox(Ty aMetaObj) throws Exception {
 		this();
-		this.metaObj = aStoreType;
+		this.metaObj = aMetaObj;
 	}
 
 	@Override
 	public String getValueStr() throws Exception {
 		String result = "";
-		for(Clasz eachClasz : this.getObjectMap().values()) {
+		for(Ty eachClasz : this.getObjectMap().values()) {
 			result = eachClasz.getValueStr();
 			if (result.isEmpty() == false) {
 				break;
@@ -61,92 +59,106 @@ public class FieldObjectBox extends FieldClasz {
 		return(result);
 	}
 
-	public Clasz getMetaObj() {
+	public Ty getMetaObj() {
 		return metaObj;
 	}
 
-	public void setMetaObj(Clasz metaObj) {
-		this.metaObj = metaObj;
+	public void setMetaObj(Ty aMetaObj) {
+		this.metaObj = aMetaObj;
+	}
+
+	public void setMetaObj(Object aMetaObj) throws Hinderance {
+		if (aMetaObj instanceof Clasz) {
+			Clasz<?> castedObj = (Clasz<?>) aMetaObj;
+			setMetaObj(castedObj);
+		} else {
+			throw new Hinderance("Cannot setMetaObj() from an incompatible object type: " + aMetaObj.getClass().getSimpleName());
+		}
 	}
 
 	public String getMetaType() {
 		return(this.metaObj.getClass().getName()) ;
 	}
 
-	public Class getMemberClass() {
+	public Class<?> getMemberClass() {
 		return(this.metaObj.getClass());
 	}
 
-	public ConcurrentHashMap<Long, Clasz> getObjectMap() {
+	public ConcurrentHashMap<Long, Ty> getObjectMap() {
 		return objectMap;
 	}
 
-	public void setObjectMap(ConcurrentHashMap<Long, Clasz> objectMap) {
+	public void setObjectMap(ConcurrentHashMap<Long, Ty> objectMap) {
 		this.objectMap = objectMap;
 	}
 
-	public Clasz getObject(long aIndex) throws Exception {
+	public Ty getObject(long aIndex) throws Exception {
 		this.mustFetch();
-		Clasz result = this.getObjectMap().get(aIndex); 
+		Ty result = this.getObjectMap().get(aIndex); 
 		return(result);
 	}
 
-	public synchronized void addValueObject(Clasz aObject) throws Exception {
+	public synchronized void addValueObject(Ty aObject) throws Exception {
 		this.setModified(true);
 		long index = this.getObjectMap().size();
-		aObject.setMasterObject(this.getMasterObject());
+		aObject.setMasterObject((Clasz<?>) this.getMasterObject());
 		this.getObjectMap().put(index, aObject);
 	}
 
+	public synchronized void addValueObjectFreeType(Object aObject) throws Exception {
+		if (aObject instanceof Clasz) {
+			@SuppressWarnings("unchecked")
+			Ty castedObject = (Ty) aObject;
+			addValueObject(castedObject);
+		} else {
+			throw new Hinderance("Cannot addValueObject() from an incompatible object type: " + aObject.getClass().getSimpleName());
+		}
+	}
+
+	@SuppressWarnings("unchecked")
 	@Override
-	public void cloneField(Field aSourceField) throws Exception {
-		this.copyFieldObjectBox(aSourceField, false);
+	public void cloneField(Connection aConn, Field aSourceField) throws Exception {
+		FieldObjectBox<Ty> sourceField = (FieldObjectBox<Ty>) aSourceField;
+		this.copyFieldObjectBox(aConn,  sourceField, false);
 		this.copyAttribute(aSourceField);
 	}
 
+	@SuppressWarnings("unchecked")
 	@Override
-	public void copyValue(Field aSourceField) throws Exception {
-		this.copyFieldObjectBox(aSourceField, true);
+	public void copyValue(Connection aConn, Field aSourceField) throws Exception {
+		this.copyFieldObjectBox(aConn, (FieldObjectBox<Ty>) aSourceField, true);
 	}
 
 
-	public void copyByRef(FieldObjectBox aSourceField) throws Exception {
-		for (Entry eachMember : aSourceField.getObjectMap().entrySet()) {
-			Clasz obj = (Clasz) eachMember.getValue();
+	public void copyByRef(FieldObjectBox<Ty> aSourceFob) throws Exception {
+		for (Entry<Long, Ty> eachMember : aSourceFob.getObjectMap().entrySet()) {
+			Ty obj = eachMember.getValue();
 			this.addValueObject(obj);
 		}
 	}
 
-	public void copyFieldObjectBox(Field aSourceField, boolean isCopy) throws Exception {
-
-		if ((aSourceField instanceof FieldObjectBox) == false) { // validate the field type
-			throw new Hinderance("Error, can only copy between array fields source: " + aSourceField.getFieldName() + ", target: " + this.getMetaType());
-		}
-		
-		FieldObjectBox source = (FieldObjectBox) aSourceField;
-		if (source.getMetaType().equalsIgnoreCase(this.getMetaType()) == false) { // validate the class type
-			throw new Hinderance("Error, copy array fields must be of same type, source type: " + source.getMetaType() + ", target type: " + this.getMetaType());
-		}
-
-		for (Entry recEach : source.getObjectMap().entrySet()) {
+	@SuppressWarnings("unchecked")
+	public void copyFieldObjectBox(Connection aConn, FieldObjectBox<Ty> aSourceField, boolean isCopy) throws Exception {
+		for(Entry<Long, Ty> recEach : aSourceField.getObjectMap().entrySet()) {
 			// for each object in the object box of aSourceField
-			Long idx = (Long) recEach.getKey();
-			Clasz obj = (Clasz) recEach.getValue();
-			Clasz targetObj = this.getObject(idx);
+			Long idx = recEach.getKey();
+			Ty obj = recEach.getValue();
+			Ty targetObj = this.getObject(idx);
 			if (targetObj == null) {
-				targetObj = (Clasz) Class.forName(source.getMetaType()).newInstance();
+				//targetObj = (Ty) Class.forName(aSourceField.getMetaType()).newInstance();
+				targetObj = (Ty) Class.forName(aSourceField.getMetaType()).getConstructor().newInstance();
 			}
 			if (isCopy) {
-				targetObj.copyAllFieldWithoutModifiedState(obj);
+				targetObj.copyAllFieldWithoutModifiedState(aConn, obj);
 			} else {
-				targetObj.copyAllFieldWithModifiedState(obj);
+				targetObj.copyAllFieldWithModifiedState(aConn, obj);
 			}
 		}
 	}
 
 	public boolean containObjectId(Long aObjId) throws Exception {
 		boolean result = false;
-		for(Clasz obj : this.getObjectMap().values()) {
+		for(Ty obj : this.getObjectMap().values()) {
 			//App.logInfo("Comparing field objectbox id: " + obj.getObjectId() + ", with: " + aObjId);
 			if (obj.getObjectId().equals(aObjId)) {
 				result = true;
@@ -171,7 +183,7 @@ public class FieldObjectBox extends FieldClasz {
 	 */
 	public void sortObjectBox() throws Exception {
 		this.setSortKey2Data();
-		Map<Long, Clasz> sortedBox = SortByComparator(this.getObjectMap());
+		Map<Long, Ty> sortedBox = SortByComparator(this.getObjectMap());
 		this.getObjectMap().clear();
 		sortedBox.entrySet().forEach((entry) -> {
 			this.getObjectMap().put(entry.getKey(), entry.getValue());
@@ -182,19 +194,20 @@ public class FieldObjectBox extends FieldClasz {
 	 * Comparing all the objects in this container with another set of objects
 	 * in another container.
 	 * 
+	 * @param <Ty>
 	 * @param aLeft
 	 * @param aRight
 	 * @return
 	 * @throws Exception 
 	 */
-	public static int compare(FieldObjectBox aLeft, FieldObjectBox aRight) throws Exception {
+	public static <Ty extends Clasz<?>> int compare(FieldObjectBox<Ty> aLeft, FieldObjectBox<Ty> aRight) throws Exception {
 		int result = 0;
 		int smallest = Integer.MIN_VALUE;
 		int largest = Integer.MAX_VALUE;
 		int setCompare;
 
-		for (Clasz left : aLeft.getObjectMap().values()) {
-			for (Clasz right : aRight.getObjectMap().values()) {
+		for (Ty left : aLeft.getObjectMap().values()) {
+			for (Ty right : aRight.getObjectMap().values()) {
 				setCompare = left.compareTo(right);
 				if (setCompare > largest) {
 					largest = setCompare;
@@ -213,13 +226,22 @@ public class FieldObjectBox extends FieldClasz {
 		return(result);
 	}
 
+	@SuppressWarnings("unchecked")
 	@Override
-	public int compareTo(Object aRight) {
+	public int compareTo(Field aRight) {
 		int result = 0;
 		try {
-			result = FieldObjectBox.compare(this, (FieldObjectBox) aRight);
+			/*
+			if (aRight instanceof FieldObjectBox) {
+			} else {
+				throw new Hinderance("Cannot compare field of different type: " + this.getClass().getSimpleName() + ", " + aRight.getClass().getSimpleName());
+			}
+			*/
+			FieldObjectBox<Ty> rightFob = (FieldObjectBox<Ty>) aRight;
+			result = FieldObjectBox.compare(this, rightFob);
 		} catch (Exception ex) {
-			App.logEror(ex);
+			//App.logEror(ex);
+			throw new RuntimeException(ex);
 		}
 		return(result);
 	}
@@ -234,20 +256,20 @@ public class FieldObjectBox extends FieldClasz {
 		clearAllSortKey(this.getMetaObj());
 	}
 
-	private static void clearAllSortKey(Clasz aClasz2Clear) throws Exception {
+	private void clearAllSortKey(Clasz<?> aClasz2Clear) throws Exception {
 		for(Field eachField : aClasz2Clear.getTreeField().values()) {
 			if (eachField.isAtomic()) {
 				if (eachField.isSortKey()) {
 					eachField.clearSortKey();
 				}
 			} else {
-				if (eachField.getFieldType() == FieldType.OBJECT) {
-					Clasz clasz = ((FieldObject) eachField).getObj();
+				if (eachField.getDbFieldType() == FieldType.OBJECT) {
+					Clasz<?> clasz = ((FieldObject<?>) eachField).getObj();
 					if (clasz != null) {
 						clearAllSortKey(clasz); // recursive call to clear the member object sort keys
 					}
-				} else if (eachField.getFieldType() == FieldType.OBJECTBOX) {
-					Clasz clasz = ((FieldObjectBox) eachField).getMetaObj();
+				} else if (eachField.getDbFieldType() == FieldType.OBJECTBOX) {
+					Clasz<?> clasz = ((FieldObjectBox<?>) eachField).getMetaObj();
 					clearAllSortKey(clasz); // recursive call to clear the meta object sort keys
 				} else {
 					throw new Hinderance("Invalid field type in object: " + aClasz2Clear.getClaszName().toUpperCase());
@@ -260,27 +282,9 @@ public class FieldObjectBox extends FieldClasz {
 		return(this.getMetaObj().getField(aFieldName));
 	}
 
-	public Clasz getMetaObject(String aFieldName) throws Exception {
-		Clasz result = ((FieldObject) this.getMetaObj().getField(aFieldName)).getObj();
-		if (result == null) {
-			Connection conn = null;
-			ObjectBase db = this.getMasterObject().getDb();
-			String className = this.getMetaObj().getFieldObj(aFieldName).getDeclareType();
-			try {
-				conn = db.getConnPool().getConnection();
-				result = Clasz.CreateObject(db, conn, Class.forName(className));
-			} finally {
-				if (conn != null) {
-					db.getConnPool().freeConnection(conn);
-				}
-			}
-		}
-		return(result);
-	}
-
 	/**
 	 * Assigned the sort keySeq properties to all of the data object in this
- container. This is required in Clasz compare method. The Clasz object
+ 	 * container. This is required in Clasz compare method. The Clasz object
 	 * that're being compare uses the keys as the sort criteria.
 	 * 
 	 * @param aClaszMeta
@@ -288,28 +292,37 @@ public class FieldObjectBox extends FieldClasz {
 	 * @throws Exception 
 	 */
 	private void setSortKey2Data() throws Exception {
-		for(Clasz dataClasz : this.getObjectMap().values()) {
+		for(Ty dataClasz : this.getObjectMap().values()) {
 			setSortKey2Data(this.getMetaObj(), dataClasz);
 		}
 	}
 
-	private static void setSortKey2Data(Clasz aClaszMeta, Clasz aClaszData) throws Exception {
+	@SuppressWarnings("unchecked")
+	private static <Ty extends Clasz<?>> void setSortKey2Data(Ty aClaszMeta, Ty aClaszData) throws Exception {
 		for(Field metaField : aClaszMeta.getTreeField().values()) {
-			Field dataField = aClaszData.getField(metaField.getFieldName());
+			Field dataField = aClaszData.getField(metaField.getDbFieldName());
 			if (metaField.isAtomic()) {
-				dataField.setSortKey(metaField);
+				if (metaField.isSortKey()) {
+					dataField.setSortKey(metaField);
+				}
 			} else {
-				if (metaField.getFieldType() == FieldType.OBJECT) {
-					Clasz claszMeta = ((FieldObject) metaField).getObj();
-					Clasz claszData = ((FieldObject) dataField).getObj();
-					if (claszData != null && (claszData.getClass().getSimpleName().equals("Clasz")) == false) { 
-						setSortKey2Data(claszMeta, claszData); // recursive call to clear the member object sort keys
+				//if (metaField.getFieldType() == FieldType.OBJECT) {
+				if (metaField instanceof FieldObject) {
+					Ty claszMeta = ((FieldObject<Ty>) metaField).getObj();
+					Ty claszData = ((FieldObject<Ty>) dataField).getObj();
+					if (claszMeta != null) {
+						if (claszData != null && (claszData.getClass().getSimpleName().equals("Clasz")) == false) { 
+							setSortKey2Data(claszMeta, claszData); // recursive call to clear the member object sort keys
+						}
 					}
-				} else if (metaField.getFieldType() == FieldType.OBJECTBOX) {
-					Clasz claszMeta = ((FieldObjectBox) metaField).getMetaObj();
-					for(Clasz eachClasz : ((FieldObjectBox) dataField).getObjectMap().values()) {
-						if ((eachClasz.getClass().getSimpleName().equals("Clasz")) == false) { 
-							setSortKey2Data(claszMeta, eachClasz);
+				//} else if (metaField.getFieldType() == FieldType.OBJECTBOX) {
+				} else if (metaField instanceof FieldObjectBox) {
+					Ty claszMeta = ((FieldObjectBox<Ty>) metaField).getMetaObj();
+					if (claszMeta != null) {
+						for(Ty eachClasz : ((FieldObjectBox<Ty>) dataField).getObjectMap().values()) {
+							if ((eachClasz.getClass().getSimpleName().equals("Clasz")) == false) { 
+								setSortKey2Data(claszMeta, eachClasz);
+							}
 						}
 					}
 				} else {
@@ -319,26 +332,74 @@ public class FieldObjectBox extends FieldClasz {
 		}
 	}
 	
-	public long getTotalMember() {
+	public long getTotalMemberInList() {
 		return(this.getObjectMap().size());
 	}
 
-	public Clasz fetchByObjectId(Connection aConn, Long aObjId, String aObjClasz) throws Exception {
+	public long getTotalMemberFromDb(Connection aConn) throws Exception {
+		long result = 0;
+		String strSql = "select count(*)"
+		+ " from " + this.getMasterObject().getIwTableName(this.getDbFieldName()) 
+		+ " where " + this.getMasterObject().getPkName() + " = " + this.getMasterObject().getObjectId();
+		PreparedStatement stmt = null;
+		ResultSet rset = null;
+		try {
+			stmt = aConn.prepareStatement(strSql);
+			rset = stmt.executeQuery();
+			while (rset.next()) {
+				result = rset.getLong(1);
+			}
+		} catch (Exception ex) {
+			if (stmt == null) {
+				throw new Hinderance(ex, "getTotalMemberInList - Fail to count total member, stmt is null");
+			} else {
+				throw new Hinderance(ex, "getTotalMemberInList - Fail to count total member: " + stmt.toString());
+			}
+		} finally {
+			if (rset != null) {
+				rset.close();
+			}
+			if (stmt != null) {
+				stmt.close();
+			}
+		}
+		return result;
+	}
+
+	public Ty fetchByObjectIdAndAppend2List(Connection aConn, Long aObjId, Class<Ty> aClass) throws Exception {
+		Ty result = fetchByObjectIdAndAppend2List(aConn, aObjId, aClass.getName());
+		return(aClass.cast(result));
+	}
+
+	public Ty fetchByObjectIdAndAppend2List(Connection aConn, Long aObjId, String aObjClasz) throws Exception {
+		return this.fetchByObjectId(aConn, String.valueOf(aObjId), aObjClasz, false);
+	}
+
+	public Ty fetchByObjectId(Connection aConn, Long aObjId, Class<Ty> aClass) throws Exception {
+		Ty result = fetchByObjectId(aConn, aObjId, aClass.getName());
+		return(aClass.cast(result));
+	}
+
+	public Ty fetchByObjectId(Connection aConn, Long aObjId, String aObjClasz) throws Exception {
 		return(this.fetchByObjectId(aConn, String.valueOf(aObjId), aObjClasz));
 	}
 
-	public Clasz fetchByObjectId(Connection aConn, String aObjId, String aObjClasz) throws Exception {
-		List<Clasz> aryFetchMember = new CopyOnWriteArrayList<>(); // for pass by ref only	
-		String strSql = "select " + this.getFieldName() + ", " + ObjectBase.LEAF_CLASS 
-		+ " from " + this.getMasterObject().getIwTableName(this.getFieldName()) 
+	public Ty fetchByObjectId(Connection aConn, String aObjId, String aObjClasz) throws Exception {
+		return fetchByObjectId(aConn, aObjId, aObjClasz, true);
+	}
+
+	public Ty fetchByObjectId(Connection aConn, String aObjId, String aObjClasz, Boolean aClearList) throws Exception {
+		List<Ty> aryFetchMember = new CopyOnWriteArrayList<>(); // for pass by ref only	
+		String strSql = "select " + this.getDbFieldName() + ", " + ObjectBase.LEAF_CLASS 
+		+ " from " + this.getMasterObject().getIwTableName(this.getDbFieldName()) 
 		+ " where " + this.getMasterObject().getPkName() + " = " + this.getMasterObject().getObjectId()
-		+ " and " + this.getFieldName() + " = " + aObjId; // getFieldName must convert to low level db field name?
+		+ " and " + this.getDbFieldName() + " = " + aObjId; // getFieldName must convert to low level db field name?
 		if (this.isPolymorphic()) {
 			strSql += " and " + ObjectBase.LEAF_CLASS + " = " + "'" + aObjClasz + "'";
 		}
-		Clasz fetchMember = null;
+		Ty fetchMember = null;
 		try {
-			FetchStatus status = FetchMemberOfBoxObject(aConn, this, this.getMasterObject(), strSql, aryFetchMember, null);
+			FetchStatus status = FieldObjectBox.FetchMember(aConn, this, this.getMasterObject(), strSql, aryFetchMember, null, aClearList);
 			this.setFetchStatus(status);
 			fetchMember = aryFetchMember.get(0);
 		} catch(Exception ex) {
@@ -348,7 +409,7 @@ public class FieldObjectBox extends FieldClasz {
 	}
 
 	public void fetchByCustomSql(Connection aConn, String aCustomSql) throws Exception {
-		FetchStatus status = FetchMemberOfBoxObject(aConn, this, this.getMasterObject(), aCustomSql);
+		FetchStatus status = FetchMember(aConn, this, this.getMasterObject(), aCustomSql);
 		this.setFetchStatus(status);
 	}
 
@@ -356,27 +417,28 @@ public class FieldObjectBox extends FieldClasz {
 		String claszTableName = this.getMetaObj().getTableName();
 		String claszTablePk = this.getMetaObj().getPkName();
 		StringBuffer strBuffer = new StringBuffer();
-		List<Field> aryWhere = Database.GetWhereClause(claszTableName, recWhere, strBuffer);
-		String strSqlAnd = " and " + strBuffer.toString();
+		Database.GetWhereClause(aConn, claszTableName, recWhere, strBuffer);
+		String strSqlAnd = "";
+		if (strBuffer.toString().trim().isBlank() == false) strSqlAnd = " and " + strBuffer.toString();
 
-		String boxMemberTableName = this.getMasterObject().getIwTableName(this.getFieldName());
-		String strJoinSql = boxMemberTableName + "." + this.getFieldName() + " = " + claszTableName + "." + claszTablePk;
-		String strSql = "select " + this.getFieldName() + ", " + ObjectBase.LEAF_CLASS 
+		String boxMemberTableName = this.getMasterObject().getIwTableName(this.getDbFieldName());
+		String strJoinSql = boxMemberTableName + "." + this.getDbFieldName() + " = " + claszTableName + "." + claszTablePk;
+		String strSql = "select " + this.getDbFieldName() + ", " + ObjectBase.LEAF_CLASS 
 		+ " from " + boxMemberTableName  + ", " + claszTableName
 		+ " where " + boxMemberTableName + "." + this.getMasterObject().getPkName() + " = " + this.getMasterObject().getObjectId()
-		+ " and " + strJoinSql
-		+ strSqlAnd;
+		+ " and " + strJoinSql;
+		if (strSqlAnd.isBlank() == false) strSql = strSql + strSqlAnd;
 
 		App.logDebg(strSql);
 		this.fetchByCustomSql(aConn, strSql);
 	}
 
 	public void fetchAll(Connection aConn) throws Exception {
-		if (this.getTotalMember() == 0) {
-			String strSql = "select " + this.getFieldName() + ", " + ObjectBase.LEAF_CLASS 
-			+ " from " + this.getMasterObject().getIwTableName(this.getFieldName()) 
+		if (this.getTotalMemberInList() == 0) {
+			String strSql = "select " + this.getDbFieldName() + ", " + ObjectBase.LEAF_CLASS 
+			+ " from " + this.getMasterObject().getIwTableName(this.getDbFieldName()) 
 			+ " where " + this.getMasterObject().getPkName() + " = " + this.getMasterObject().getObjectId();
-			FetchStatus status = FetchMemberOfBoxObject(aConn, this, this.getMasterObject(), strSql);
+			FetchStatus status = FetchMember(aConn, this, this.getMasterObject(), strSql);
 			this.setFetchStatus(status);
 		} else {
 			if (this.getMasterObject().getObjectId() != Clasz.NOT_INITIALIZE_OBJECT_ID) { // if this is new object, do nothing actually, don't need do fetchAll, don't need warn user
@@ -385,16 +447,16 @@ public class FieldObjectBox extends FieldClasz {
 		}
 	}
 
-	public static FetchStatus FetchMemberOfBoxObject(Connection aConn, FieldObjectBox aField, Clasz aMasterObj, String strSql) throws Exception {
-		List<Clasz> aryFetchMember = new CopyOnWriteArrayList<>(); // for pass by ref only	
-		FetchStatus status = FetchMemberOfBoxObject(aConn, aField, aMasterObj, strSql, aryFetchMember, null);
+	public static <Ty extends Clasz<?>> FetchStatus FetchMember(Connection aConn, FieldObjectBox<Ty> aResultFob, Clasz<?> aMasterObj, String strSql) throws Exception {
+		List<Ty> aryFetchMember = new CopyOnWriteArrayList<>(); // for pass by ref only	
+		FetchStatus status = FieldObjectBox.FetchMember(aConn, aResultFob, aMasterObj, strSql, aryFetchMember, null);
 		return(status);
 	}
 
-	public boolean gotMember(Connection aConn, Clasz aMember) throws Exception {
+	public boolean gotMember(Connection aConn, Ty aMember) throws Exception {
 		boolean result = false;
-		String strSql = "select " + this.getFieldName() + ", " + ObjectBase.LEAF_CLASS 
-		+ " from " + this.getMasterObject().getIwTableName(this.getFieldName()) 
+		String strSql = "select " + this.getDbFieldName() + ", " + ObjectBase.LEAF_CLASS 
+		+ " from " + this.getMasterObject().getIwTableName(this.getDbFieldName()) 
 		+ " where " + this.getMasterObject().getPkName() + " = " + this.getMasterObject().getObjectId();
 		PreparedStatement stmt = null;
 		ResultSet rset = null;
@@ -426,35 +488,68 @@ public class FieldObjectBox extends FieldClasz {
 		return(result);
 	}
 
-	public void forEachMember(Connection aConn, Callback2ProcessClasz aCallback) throws Exception {
+	/*
+	public void forEachClasz(Connection aConn, Callback2ProcessClasz aCallback) throws Exception {
+		this.forEachMember(aConn, "all", (Callback2ProcessMember) aCallback);
+	}
+	*/
+
+	public void forEachMember(Connection aConn, Callback2ProcessMember<Ty> aCallback) throws Exception {
 		this.forEachMember(aConn, "all", aCallback);
 	}
 
-	public void forEachMember(Connection aConn, Clasz aCriteria, Callback2ProcessClasz aCallback) throws Exception {
+	public void forEachMember(Connection aConn, Ty aCriteria, Callback2ProcessMember<Ty> aCallback) throws Exception {
+		forEachMember(aConn, aCriteria, null, null, aCallback);
+	}
+
+	public void forEachMember(Connection aConn, Ty aCriteria, List<String> aSortField, List<SortOrder> aSortOrder, Callback2ProcessMember<Ty> aCallback) throws Exception {
 		String strSql;
-		//Map<String, Record> whereBox = new ConcurrentHashMap<>(); // each table name (string) and a record for the where fields (record)
+		if (this.getMemberClass().equals(aCriteria.getClass()) == false) throw new Hinderance("FieldObjectBox.forEachMember search criteria can only be FOB type");
 		Multimap<String, Record> whereBox = Multimaps.synchronizedListMultimap(ArrayListMultimap.create());
 		ObjectBase.GetMemberBoxByMemberCriteria(aConn, this, aCriteria, whereBox); // the select criteria for this leaf clszObject, doesn't do the parent clszObject
 		List<Field> aryWhere = null;
 		if (whereBox.isEmpty() == false) {
 			StringBuffer strBuffer = new StringBuffer();
-			aryWhere = Database.GetWhereClause(whereBox, strBuffer); // convert the where record into array list
-			String mainTableName = this.getMasterObject().getIwTableName(this.getFieldName());
-			strSql = "select " + this.getFieldName() + ", " + ObjectBase.LEAF_CLASS 
-			+ " from " + Database.GetFromClause(mainTableName, whereBox);
-			strSql += " where " + strBuffer.toString();
+			aryWhere = Database.GetWhereClause(aConn, whereBox, strBuffer); // convert the where record into array list
+			String mainTableName = this.getMasterObject().getIwTableName(this.getDbFieldName());
+			strSql = "select " + this.getDbFieldName() + ", " + ObjectBase.LEAF_CLASS;
+			String strFrom = Database.GetFromClause(mainTableName, whereBox);
+			String strWhere = strBuffer.toString();
+
+			String iwTableName = this.getMasterObject().getIwTableName(this.getDbFieldName());
+			if (strFrom.contains(iwTableName) == false) {
+				if (strFrom.isEmpty() == false) strFrom += ", ";
+				strFrom += iwTableName;
+			}
+			String link2Parent = this.getMasterObject().getPkName() + " = " + this.getMasterObject().getObjectId();
+			if (strWhere.isEmpty() == false) strWhere += " and ";
+			strWhere += "(" + link2Parent + ")";
+
+			strSql = strSql + " from " + strFrom + " where " + strWhere;
 		} else {
-			strSql = "select " + this.getFieldName() + ", " + ObjectBase.LEAF_CLASS 
-			+ " from " + this.getMasterObject().getIwTableName(this.getFieldName()) 
+			strSql = "select " + this.getDbFieldName() + ", " + ObjectBase.LEAF_CLASS 
+			+ " from " + this.getMasterObject().getIwTableName(this.getDbFieldName()) 
 			+ " where " + this.getMasterObject().getPkName() + " = " + this.getMasterObject().getObjectId();
 		}
-		FetchStatus status = FetchMemberOfBoxObject(aConn, this, this.getMasterObject(), strSql, null, aCallback, aryWhere);
+
+		String strOrder = "";
+		if (aSortField != null && aSortOrder != null) {
+			for(int cntrField = 0; cntrField < aSortField.size(); cntrField++) {
+				String sortField = aSortField.get(cntrField).toLowerCase();
+				SortOrder sortOrder = aSortOrder.get(cntrField);
+				if (strOrder.isEmpty() == false) strOrder += ", ";
+				strOrder += sortField + " " + SortOrder.AsString(sortOrder);
+			}
+			strSql += " order by " + strOrder;
+		}
+
+		FetchStatus status = FieldObjectBox.FetchMember(aConn, this, this.getMasterObject(), strSql, null, aCallback, aryWhere);
 		this.setFetchStatus(status);
 	}
 
-	public void forEachMember(Connection aConn, String csvMemberList, Callback2ProcessClasz aCallback) throws Exception {
-		String strSql = "select " + this.getFieldName() + ", " + ObjectBase.LEAF_CLASS 
-		+ " from " + this.getMasterObject().getIwTableName(this.getFieldName()) 
+	public void forEachMember(Connection aConn, String csvMemberList, Callback2ProcessMember<Ty> aCallback) throws Exception {
+		String strSql = "select " + this.getDbFieldName() + ", " + ObjectBase.LEAF_CLASS 
+		+ " from " + this.getMasterObject().getIwTableName(this.getDbFieldName()) 
 		+ " where " + this.getMasterObject().getPkName() + " = " + this.getMasterObject().getObjectId();
 		if (csvMemberList.equals("all") == false) {
 			//strSql += " and " + this.getFieldName() + " in (" + csvMemberList + ")";
@@ -464,27 +559,25 @@ public class FieldObjectBox extends FieldClasz {
 			for(int cntr = 0; cntr < employmentPair.length; cntr+=2) {
 				if (!selectedPair.isEmpty()) selectedPair += " or ";
 				selectedPair += "(";
-				selectedPair += this.getFieldName() + " = " + employmentPair[cntr].trim();
+				selectedPair += this.getDbFieldName() + " = " + employmentPair[cntr].trim();
 				selectedPair += " and " + ObjectBase.LEAF_CLASS + " = '" + employmentPair[cntr + 1].trim() + "'";
 				selectedPair += ")";
 			}
 			strSql += selectedPair;
 			strSql += ")";
 		}	
-		FetchStatus status = FetchMemberOfBoxObject(aConn, this, this.getMasterObject(), strSql, null, aCallback);
+		FetchStatus status = FieldObjectBox.FetchMember(aConn, this, this.getMasterObject(), strSql, null, aCallback);
 		this.setFetchStatus(status);
 	}
 
-	public static void RemoveStaleMember(Connection aConn, Clasz aMasterObj, FieldObjectBox aFob, Long aMemberOid) throws Exception {
-		String strSql = "delete from " + aMasterObj.getIwTableName(aFob.getFieldName()) 
+	public static <Ty extends Clasz<?>> void RemoveStaleMember(Connection aConn, Clasz<?> aMasterObj, FieldObjectBox<Ty> aFob, Long aMemberOid) throws Exception {
+		String strSql = "delete from " + aMasterObj.getIwTableName(aFob.getDbFieldName()) 
 		+ " where " + aMasterObj.getPkName() + " = " + aMasterObj.getObjectId()
-		+ " and " + aFob.getFieldName() + " = " + aMemberOid;
+		+ " and " + aFob.getDbFieldName() + " = " + aMemberOid;
 		PreparedStatement stmt = null;
 		Connection conn = null;
 		try {
 			App.logWarn(FieldObjectBox.class, "Removing stale member, sql: " + strSql);
-			//conn = aConn.getBaseDb().getConnPool().getConnection(); // need new connection for this so it'll not interfere with aConn processing, this is one of the reason min 2 conn is needed for each session
-			//conn.setAutoCommit(true);
 			conn = aConn;
 			stmt = conn.prepareStatement(strSql);
 			stmt.executeUpdate();
@@ -500,35 +593,43 @@ public class FieldObjectBox extends FieldClasz {
 		}
 	}
 
-	public static FetchStatus FetchMemberOfBoxObject(Connection aConn, FieldObjectBox aFob, Clasz aMasterObj, String strSql, List<Clasz> aMemberContainer, Callback2ProcessClasz aCallback) throws Exception {
-		return(FetchMemberOfBoxObject(aConn, aFob, aMasterObj, strSql, aMemberContainer, aCallback, null));
-
+	public static <Ty extends Clasz<?>> FetchStatus FetchMember(Connection aConn, FieldObjectBox<Ty> aResultFob, Clasz<?> aMasterObj, String strSql, List<Ty> aMemberContainer, Callback2ProcessMember<Ty> aCallback) throws Exception {
+		return FetchMember(aConn, aResultFob, aMasterObj, strSql, aMemberContainer, aCallback, true);
 	}
 
-	public static FetchStatus FetchMemberOfBoxObject(Connection aConn, FieldObjectBox aFob, Clasz aMasterObj, String strSql, List<Clasz> aMemberContainer, Callback2ProcessClasz aCallback, List<Field> aAryWhere) throws Exception {
+	public static <Ty extends Clasz<?>> FetchStatus FetchMember(Connection aConn, FieldObjectBox<Ty> aResultFob, Clasz<?> aMasterObj, String strSql, List<Ty> aMemberContainer, Callback2ProcessMember<Ty> aCallback, Boolean aClearList) throws Exception {
+		return(FieldObjectBox.FetchMember(aConn, aResultFob, aMasterObj, strSql, aMemberContainer, aCallback, null, aClearList));
+	}
+
+	public static <Ty extends Clasz<?>> FetchStatus FetchMember(Connection aConn, FieldObjectBox<Ty> aResultFob, Clasz<?> aMasterObj, String strSql, List<Ty> aMemberContainer, Callback2ProcessMember<Ty> aCallback, List<Field> aAryWhere) throws Exception {
+		return FetchMember(aConn, aResultFob, aMasterObj, strSql, aMemberContainer, aCallback, aAryWhere, true);
+	}
+
+	@SuppressWarnings("unchecked")
+	public static <Ty extends Clasz<?>> FetchStatus FetchMember(Connection aConn, FieldObjectBox<Ty> aResultFob, Clasz<?> aMasterObj, String strSql, List<Ty> aMemberContainer, Callback2ProcessMember<Ty> aCallback, List<Field> aAryWhere, Boolean aClearList) throws Exception {
 		FetchStatus result = FetchStatus.SOF;
 		PreparedStatement stmt = null;
 		ResultSet rset = null;
 		try {
 			stmt = aConn.prepareStatement(strSql);
-			if(aAryWhere != null) Database.SetStmtValue(stmt, aAryWhere);
+			if(aAryWhere != null) Database.SetStmtValue(aConn, stmt, aAryWhere);
 			rset = stmt.executeQuery();
-			aFob.getObjectMap().clear();
+			if (aClearList) aResultFob.getObjectMap().clear();
 			while (rset.next()) {
 				long pk = rset.getLong(1);
-				Class leafClass = Class.forName(aFob.getDeclareType());
+				Class<?> leafClass = Class.forName(aResultFob.getDeclareType());
 				String polymorphicName = rset.getString(2);
 				if (polymorphicName != null && polymorphicName.isEmpty() == false) {
 					leafClass = Class.forName(polymorphicName); // if its a polymorphic member field
 				}
-				Clasz fetchMember = Clasz.fetchObjectByPk(aMasterObj.getDb(), aConn, leafClass, pk);
+				Ty fetchMember = Clasz.FetchObjectByPk(aConn, (Class<Ty>) leafClass, pk);
 				if (fetchMember.getObjectId().equals(Clasz.NOT_INITIALIZE_OBJECT_ID)) {
-					RemoveStaleMember(aConn, aMasterObj, aFob, pk);
+					RemoveStaleMember(aConn, aMasterObj, aResultFob, pk);
 				} else {
 					if (aMemberContainer != null) {
 						aMemberContainer.add(fetchMember);
 					}
-					aFob.addValueObject(fetchMember);  // now put the new member into the field object box
+					aResultFob.addValueObject(fetchMember);  // now put the new member into the field object box
 					if (aCallback != null) {
 						if (aCallback.processClasz(aConn, fetchMember) == false) {
 							break;
@@ -538,11 +639,11 @@ public class FieldObjectBox extends FieldClasz {
 			}
 			result = FetchStatus.EOF;
 		} catch (Exception ex) {
-//App.logEror(FieldObjectBox.class, ex);
+			//App.logEror(FieldObjectBox.class, ex);
 			if (stmt == null) {
-				throw new Hinderance(ex, "FetchMemberOfBoxObject - Fail to populate object array: null");
+				throw new Hinderance(ex, "FetchMember - Fail to populate object array: null");
 			} else {
-				throw new Hinderance(ex, "FetchMemberOfBoxObject - Fail to populate object array: " + stmt.toString());
+				throw new Hinderance(ex, "FetchMember - Fail to populate object array: " + stmt.toString());
 			}
 		} finally {
 			if (rset != null) {
@@ -555,256 +656,59 @@ public class FieldObjectBox extends FieldClasz {
 		return(result);
 	}
 
-	public FetchStatus fetchByObjectIndex(Connection aConn, String aSortField, int aBatchSize, String aIndexName, String aWhereClause) throws Exception {
-		return(this.fetchBySection(aConn, "next", aBatchSize, aSortField, null, aIndexName, aWhereClause));
+	public FetchStatus fetchSectionByObjectIndex(Connection aConn, String aPageDirection, int aFetchSize
+	, String aSortField, String aSortValue, String aIndexName) throws Exception {
+		return(this.fetchSectionByObjectIndex(aConn, aPageDirection, aFetchSize, aSortField, aSortValue, aIndexName, ""));
 	}
 
-	public FetchStatus fetchBySection(Connection aConn, String aPageDirection, String aSortField, String aSortValue, String aIndexName) throws Exception {
-		return(this.fetchBySection(aConn, aPageDirection, aSortField, aSortValue, aIndexName, ""));
-	}
-
-	public FetchStatus fetchBySection(Connection aConn, String aPageDirection, String aSortField, String aSortValue, String aIndexName, String aWhereClause) throws Exception {
-		int pageSize = this.getFetchSize();
-		return(this.fetchBySection(aConn, aPageDirection, pageSize, aSortField, aSortValue, aIndexName, aWhereClause));
-	}
-
-	public FetchStatus fetchBySection(Connection aConn, String aPageDirection, int aFetchSize, String aSortField, String aSortValue, String aIndexName) throws Exception {
-		return(this.fetchBySection(aConn, aPageDirection, aFetchSize, aSortField, aSortValue, aIndexName, ""));
-
-	}
-
-	public FetchStatus fetchBySection(Connection aConn, String aPageDirection, int aFetchSize, String aSortField, String aSortValue, String aIndexName, String aWhereClause) throws Exception {
-		//FetchStatus result = this.fetchBySection(aConn, aPageDirection, aFetchSize, aSortField, aSortValue, aIndexName, SortOrder.ASC, aWhereClause);
+	public FetchStatus fetchSectionByObjectIndex(Connection aConn, String aPageDirection, int aFetchSize
+	, String aSortField, String aSortValue, String aIndexName, String aWhereClause) throws Exception {
 		List<String> sortFieldList = new CopyOnWriteArrayList<>();
 		List<String> sortValueList = new CopyOnWriteArrayList<>();
 		List<SortOrder> sortOrderList = new CopyOnWriteArrayList<>();
 		sortFieldList.add(aSortField);
 		sortValueList.add(aSortValue);
 		sortOrderList.add(SortOrder.ASC);
-		FetchStatus result = this.fetchBySection(aConn, aPageDirection, aFetchSize, sortFieldList, sortValueList, sortOrderList, aIndexName, aWhereClause);
+		FetchStatus result = this.fetchSectionByObjectIndex(aConn, aPageDirection, aFetchSize, sortFieldList, sortValueList, sortOrderList, aIndexName, aWhereClause);
 		return(result);
 	}
 
-	public FetchStatus fetchBySection(Connection aConn, String aPageDirection, int aFetchSize, String aSortField, String aSortValue, String aIndexName, SortOrder aDisplayOrder) throws Exception {
+	public FetchStatus fetchSectionByObjectIndex(Connection aConn, String aPageDirection, int aFetchSize
+	, String aSortField, String aSortValue, String aIndexName, SortOrder aDisplayOrder) throws Exception {
 		List<String> sortFieldList = new CopyOnWriteArrayList<>();
 		List<String> sortValueList = new CopyOnWriteArrayList<>();
 		List<SortOrder> sortOrderList = new CopyOnWriteArrayList<>();
 		sortFieldList.add(aSortField);
 		sortValueList.add(aSortValue);
 		sortOrderList.add(aDisplayOrder);
-		//return(this.fetchBySection(aConn, aPageDirection, aFetchSize, aSortField, aSortValue, aIndexName, aDisplayOrder, ""));
-		return(this.fetchBySection(aConn, aPageDirection, aFetchSize, sortFieldList, sortValueList, sortOrderList, aIndexName, ""));
+		return(this.fetchSectionByObjectIndex(aConn, aPageDirection, aFetchSize, sortFieldList, sortValueList, sortOrderList, aIndexName, ""));
 	}
 
-	@Deprecated
-	private FetchStatus fetchBySection(Connection aConn, String aPageDirection, int aFetchSize, String aSortField, String aSortValue, String aIndexName, SortOrder aDisplayOrder, String aWhereClause) throws Exception {
-		Clasz masterObj = this.getMasterObject();
-		FetchStatus result = fetchMemberOfBoxObjectBySection(aConn, masterObj, this, aPageDirection, aFetchSize, aSortField, aSortValue, aIndexName, aDisplayOrder, aWhereClause);
+	public FetchStatus fetchSectionByObjectIndex(Connection aConn, String aPageDirection, int aFetchSize
+	, List<String> aSortFieldList, List<String> aSortValueList, List<SortOrder> aSortOrderList
+	, String aIndexName) throws Exception {
+		return(this.fetchSectionByObjectIndex(aConn, aPageDirection, aFetchSize, aSortFieldList, aSortValueList, aSortOrderList, aIndexName, ""));
+	}
+
+	private FetchStatus fetchSectionByObjectIndex(Connection aConn, String aPageDirection, int aFetchSize
+	, List<String> aSortFieldList, List<String> aSortValueList, List<SortOrder> aSortOrderList
+	, String aIndexName, String aWhereClause) throws Exception {
+		Clasz<?> masterObj = this.getMasterObject();
+		FetchStatus result = fetchSectionByObjectIndex(aConn, masterObj, this, aPageDirection, aFetchSize, aSortFieldList, aSortValueList, aSortOrderList, aIndexName, aWhereClause);
 		this.setFetchStatus(result);
 		return(result);
 	}
 
-	public FetchStatus fetchBySection(Connection aConn, String aPageDirection, int aFetchSize, List<String> aSortFieldList, List<String> aSortValueList, List<SortOrder> aSortOrderList, String aIndexName) throws Exception {
-		return(this.fetchBySection(aConn, aPageDirection, aFetchSize, aSortFieldList, aSortValueList, aSortOrderList, aIndexName, ""));
-	}
-
-	private FetchStatus fetchBySection(Connection aConn, String aPageDirection, int aFetchSize, List<String> aSortFieldList, List<String> aSortValueList, List<SortOrder> aSortOrderList, String aIndexName, String aWhereClause) throws Exception {
-		Clasz masterObj = this.getMasterObject();
-		FetchStatus result = fetchMemberOfBoxObjectBySection(aConn, masterObj, this, aPageDirection, aFetchSize, aSortFieldList, aSortValueList, aSortOrderList, aIndexName, aWhereClause);
-		this.setFetchStatus(result);
-		return(result);
-	}
-
-	/**
-	 * 
-	 * @param aConn - database connection
-	 * @param aFieldBox - the fieldobject box where member instances is place into
-	 * @param aMasterObj - the parent clasz which contain the member field box
-	 * @param aPageDirection - either the first page, next page, previous page or last page
-	 * @param aPageSize - the number of record to retrieve in one go/batch
-	 * @param aSortField - the keySeq field
-	 * @param aSortValue - the last or first keySeq field value from the client's page
-	 * @param aIndexName - the "Object Index" name to be use for batch retrieval
-	 * @throws Exception 
-	 */
-	@Deprecated
-	private FetchStatus fetchMemberOfBoxObjectBySection(Connection aConn, Clasz aMasterObj, FieldObjectBox aFieldBox, String aPageDirection, int aPageSize, String aSortField, String aSortValue, String aIndexName, SortOrder aDisplayOrder, String aWhereClause) throws Exception {
-		FetchStatus result = FetchStatus.EOF;
-		PreparedStatement stmt = null;
-		ResultSet rset = null;
-		try {
-			if (aDisplayOrder == SortOrder.DSC) {
-				if (aPageDirection.equals("next")) { // reverse the direction if display by descending order
-					aPageDirection = "prev";
-				} else {
-					aPageDirection = "next";
-				}
-			}
-
-			String whereClause = "";
-			String sortOrder = "asc";
-			Table oiTable = new Table(aIndexName);
-			oiTable.initMeta(aConn);
-			Field keyField = oiTable.getField(aSortField);
-			if (aSortValue == null || aSortValue.trim().isEmpty()) aSortValue = null;  // for empty or null value, there'll be no where range clause
-			if (keyField.getFieldType() == FieldType.STRING) {
-				if (aPageDirection.equals("next")) {
-					if (aSortValue != null) whereClause += "lower(" + aSortField + ") > lower('" + aSortValue + "')";
-					sortOrder = "asc";
-				} else if (aPageDirection.equals("prev")) {
-					if (aSortValue != null) whereClause += "lower(" + aSortField + ") < lower('" + aSortValue + "')";
-					sortOrder = "desc";
-				} else if (aPageDirection.equals("first")) {
-					sortOrder = "asc";
-				} else if (aPageDirection.equals("last")) {
-					sortOrder = "desc";
-				}
-			} else if (keyField.getFieldType() == FieldType.DATETIME || keyField.getFieldType() == FieldType.DATE) {
-				if (aPageDirection.equals("next")) {
-					if (aSortValue != null) whereClause += aSortField + " > ?";
-					sortOrder = "asc";
-				} else if (aPageDirection.equals("prev")) {
-					if (aSortValue != null) whereClause += aSortField + " < ?";
-					sortOrder = "desc";
-				} else if (aPageDirection.equals("first")) {
-					sortOrder = "asc";
-				} else if (aPageDirection.equals("last")) {
-					sortOrder = "desc";
-				}
-			} else {
-				throw new Hinderance("The field type in object index: " + aIndexName + ", type: " + keyField.getFieldType() + ", is not supported!");
-			}
-			
-			if (aWhereClause != null && !aWhereClause.isEmpty()) {
-				if (whereClause.isEmpty() == false) whereClause += " and ";
-				whereClause += " " + aWhereClause.trim();
-			}
-
-			Class fieldClass = Class.forName(aFieldBox.getDeclareType());
-			String strSql = SqlStrOfObjectIndex(fieldClass, aIndexName, whereClause, aSortField + " " + sortOrder, aFieldBox, aMasterObj);
-			stmt = aConn.prepareStatement(strSql);
-			if (aSortValue != null) {
-				if ((keyField.getFieldType() == FieldType.DATETIME || keyField.getFieldType() == FieldType.DATE) && whereClause.isEmpty() == false) {
-					java.sql.Timestamp dateValue;
-					Field fieldDt = (Field) keyField;
-					fieldDt.setValueStr(aSortValue);
-					String dbDate;
-					if (fieldDt instanceof FieldDateTime) {
-						dbDate = DateAndTime.FormatForJdbcTimestamp(((FieldDateTime) fieldDt).getValueDateTime());
-					} else { // this is instance of FieldDate with no time
-						FieldDate castedDate = (FieldDate) fieldDt;
-						DateTime dateNoTime = castedDate.getValueDate();
-						//DateTime endOfDay = DateAndTime.GetDayEnd(dateNoTime);
-						DateTime endOfDay = DateAndTime.GetDayStart(dateNoTime);
-						dbDate = DateAndTime.FormatForJdbcTimestamp(endOfDay);
-					}
-					dateValue = java.sql.Timestamp.valueOf(dbDate); // format must be in "2005-04-06 09:01:10"
-					stmt.setTimestamp(1, dateValue);
-				}
-			}
-			rset = stmt.executeQuery();
-			App.logDebg(this, "ObjectIndex sql: " + stmt.toString());
-			aFieldBox.getObjectMap().clear();
-			int cntrRow = 0;
-			Integer[] cntrThreadPassAsRef = {0};
-			List<Thread> threadPool = new CopyOnWriteArrayList<>();
-Clasz.StartDebug = false;
-Clasz.StartTime = new GregorianCalendar();
-			while (rset.next()) {
-				App.logDebg(this, "Result set fetch cntr: " + cntrRow + ", pageSize: " + aPageSize);
-				if (cntrRow < aPageSize) {
-					cntrRow++;
-					long pk = rset.getLong(1);
-					Class leafClass = fieldClass;
-					String polymorphicName = rset.getString(2);
-					if (polymorphicName != null && polymorphicName.isEmpty() == false) {
-						leafClass = Class.forName(polymorphicName); // if its a polymorphic member field, get its polymorphic class name
-					}
-
-					// can refactor as a spawner pattern in future
-					if (App.getMaxThread() == 1) { // no threading
-						cntrThreadPassAsRef[0]++;
-						App.logDebg(this, "Spawning thread sequentially: " + cntrThreadPassAsRef[0]);
-						(new PopulateMemberObjectThreadPk(cntrThreadPassAsRef, aMasterObj, aConn, aFieldBox, leafClass, pk)).join();
-					} else {
-						int cntrAttempt = 0;
-						int maxAttempt = App.MAX_GET_CONNECTION_ATTEMPT;
-						Connection conn = null;
-						while(true) {
-							try {
-								cntrAttempt++;
-								conn = aConn.getBaseDb().getConnPool().getConnection(); // here will throw exception from connection pool, if too many attempts
-								if (cntrThreadPassAsRef[0] >= App.getMaxThread()) { 
-									aConn.getBaseDb().getConnPool().freeConnection(conn); 
-									App.ShowThreadingStatus(FieldObjectBox.class, "fetchMemberOfBoxObjectBySection", cntrThreadPassAsRef[0], App.getMaxThread(), cntrAttempt, maxAttempt);
-									Thread.sleep(App.MAX_THREAD_OR_CONN_WAIT); // if no db connection, wait x second and continue the loop
-								} else { 
-									cntrThreadPassAsRef[0]++;
-									App.logDebg(this, "Spawning thread parallelly: " + cntrThreadPassAsRef[0]);
-									Thread theThread = new PopulateMemberObjectThreadPk(cntrThreadPassAsRef, aMasterObj, conn, aFieldBox, leafClass, pk);
-									threadPool.add(theThread);
-									break;
-								}
-							} catch(Exception ex) {
-								App.ShowThreadingStatus(FieldObjectBox.class, "fetchMemberOfBoxObjectBySection", cntrThreadPassAsRef[0], App.getMaxThread(), cntrAttempt, maxAttempt);
-								if (cntrAttempt >= maxAttempt) {
-									throw new Hinderance(ex, "[fetchMemberOfBoxObjectBySection] Give up threading due to insufficent db connection");
-								} else {
-									Thread.sleep(App.MAX_THREAD_OR_CONN_WAIT); // wait for other db conn to free up
-								}
-							} 
-						}
-					}
-					// end of spawner
-
-					result = FetchStatus.EOF;
-				} else {
-					result = FetchStatus.MOF;
-					App.logDebg(this, "Completed ObjectIndex parallel fetch, total record: " + cntrRow);
-					break;
-				}
-			}
-
-			App.logDebg(this, "Waiting for all spawned thread to complete, total thread: " + threadPool.size());
-			for(Thread eachThread : threadPool) {
-				eachThread.join(); // for each spawn thread, call join to wait for them to complete
-			}
-Clasz.StartDebug = false;
-
-			// threading result is not sorted, now sort it
-			String sortField = aSortField.substring(aSortField.lastIndexOf("$") + 1);
-			aFieldBox.clearAllSortKey();
-			aFieldBox.getMetaObj().getField(sortField).setSortKey(true);
-			aFieldBox.getMetaObj().getField(sortField).setSortOrder(aDisplayOrder);
-			aFieldBox.sort();
-			App.logDebg(this, "Completed all PopulateMemberObjectThreadPk");
-		} catch (Exception ex) {
-			if (stmt == null) {
-				throw new Hinderance(ex, "fetchMemberOfBoxObjectBySection - Fail to populate object array: null");
-			} else {
-				throw new Hinderance(ex, "fetchMemberOfBoxObjectBySection - Fail to populate object array: " + stmt.toString());
-			}
-		} finally {
-			if (rset != null) {
-				rset.close();
-			}
-			if (stmt != null) {
-				stmt.close();
-			}
-		}
-		return(result);
-	}
-
-	public static String SqlStrOfObjectIndex(Class aClass, String aIndexName, String aWhereClause, String aOrderClause, FieldObjectBox aField, Clasz aMasterObj) throws Exception {
+	public static <Ty extends Clasz<?>> String SqlStrOfObjectIndex(Class<?> aClass, String aIndexName, String aWhereClause, String aOrderClause, FieldObjectBox<Ty> aField, Clasz<?> aMasterObj) throws Exception {
 		String result = "";
 		if (Clasz.class.isAssignableFrom(aClass)) {
-			String strIndexLeaf = Clasz.CreateLeafClassColName(aField.getFieldName());	
-			String sqlSelect = "select" + " mom_child."+ aField.getFieldName() + ", " + "mom_child." + ObjectBase.LEAF_CLASS 
+			String strIndexLeaf = Clasz.CreateLeafClassColName(aField.getDbFieldName());	
+			String sqlSelect = "select" + " mom_child."+ aField.getDbFieldName() + ", " + "mom_child." + ObjectBase.LEAF_CLASS 
 			+ " from " + aIndexName + ", " 
-			+ "(select " + aField.getFieldName() + ", " + ObjectBase.LEAF_CLASS 
-			+ " from " + aMasterObj.getIwTableName(aField.getFieldName()) 
+			+ "(select " + aField.getDbFieldName() + ", " + ObjectBase.LEAF_CLASS 
+			+ " from " + aMasterObj.getIwTableName(aField.getDbFieldName()) 
 			+ " where " + aMasterObj.getPkName() + " = " + aMasterObj.getObjectId() + ") mom_child";
-			String sqlWhere = " where (mom_child." + aField.getFieldName() + " = " + aIndexName + "." + aField.getFieldName() 
+			String sqlWhere = " where (mom_child." + aField.getDbFieldName() + " = " + aIndexName + "." + aField.getDbFieldName() 
 			+ " and " + aIndexName + "." + aMasterObj.getPkName() + " = " + aMasterObj.getObjectId() 
 			+ " and " + aIndexName + "." + strIndexLeaf + " = " + "mom_child." + ObjectBase.LEAF_CLASS
 			+ ")";
@@ -823,18 +727,16 @@ Clasz.StartDebug = false;
 		return(result);
 	}
 
-	static final class PopulateMemberObjectThreadPk extends Thread {
+	static final class PopulateMemberObjectThreadPk<Ty extends Clasz<?>> extends Thread {
 		Integer[] cntrThread;
-		Clasz masterObject;
 		Connection conn;
-		Class leafClass;
+		Class<Ty> leafClass;
 		Long pk;
 
-		FieldObjectBox parentField;
+		FieldObjectBox<Ty> parentField;
 
-		public PopulateMemberObjectThreadPk(Integer[] aCntrThread, Clasz aMasterObject, Connection aConn, FieldObjectBox aParent, Class aClass, Long aPk) throws Exception {
+		public PopulateMemberObjectThreadPk(Integer[] aCntrThread, Connection aConn, FieldObjectBox<Ty> aParent, Class<Ty> aClass, Long aPk) throws Exception {
 			this.cntrThread = aCntrThread;
-			this.masterObject = aMasterObject;
 			this.conn = aConn;
 			this.parentField = aParent;
 			this.leafClass = aClass;
@@ -849,14 +751,15 @@ Clasz.StartDebug = false;
 		@Override
 		public void run() {
 			try {
-				Clasz fetchMember = Clasz.fetchObjectByPk(this.masterObject.getDb(), this.conn, this.leafClass, this.pk);
+				Ty fetchMember = Clasz.FetchObjectByPk(this.conn, (Class<Ty>) this.leafClass, this.pk);
 				if (fetchMember.getObjectId().equals(Clasz.NOT_INITIALIZE_OBJECT_ID)) {
 					RemoveStaleMember(this.conn, this.parentField.getMasterObject(), this.parentField, this.pk); // if stale member, never add them into the Fob, coz they're not a member already, they're stale
 				} else {
 					this.parentField.addValueObject(fetchMember);  // now put the new member into the field object box
 				}
 			} catch (Exception ex) {
-				App.logEror(ex, "Fail thread: " + this.cntrThread[0] + ", in FetchMemberThread for class: " + this.leafClass.getSimpleName() + ", of pk: " + this.pk);
+				//App.logEror(ex, "Fail thread: " + this.cntrThread[0] + ", in FetchMemberThread for class: " + this.leafClass.getSimpleName() + ", of pk: " + this.pk);
+				throw new RuntimeException(ex);
 			} finally {
 				if (App.getMaxThread() != 1) {
 					this.conn.getBaseDb().getConnPool().freeConnection(this.conn);
@@ -870,75 +773,19 @@ Clasz.StartDebug = false;
 		}
 	}
 
-	public interface GetFetchChildSql<T> {
-		Object execute(T aParam) throws Exception;
+	public interface GetFetchChildSql<Ty> {
+		Object execute(Ty aParam) throws Exception;
 	}
 
-	public interface AfterPopulate<T> {
-			Object execute(T aParam) throws Exception;
+	public interface AfterPopulate<Ty> {
+			Object execute(Ty aParam) throws Exception;
 	}
 
-	/*
-	static final class PopulateMemberObjectThread extends Thread {
-		Integer[] cntrThread;
-		ObjectBase dbase;
-		Connection conn;
-		Clasz masterObj;
-		String childFieldName;
-		String fetchChildSql = "";
-		AfterPopulate afterPopulate;
-
-		public PopulateMemberObjectThread(Integer[] aCntrThread, ObjectBase aDb, Connection aConn, Clasz aMasterObj, String aChildFieldName, String aFetchSql) throws Exception {
-			this(aCntrThread, aDb, aConn, aMasterObj, aChildFieldName, aFetchSql, null);
-		}
-
-		public PopulateMemberObjectThread(Integer[] aCntrThread, ObjectBase aDb, Connection aConn, Clasz aMasterObj, String aChildFieldName, String aFetchSql, AfterPopulate<Clasz> aAfterPopulate) throws Exception {
-			this.cntrThread = aCntrThread;
-			this.dbase = aDb;
-			this.conn = aConn;
-			this.masterObj = aMasterObj;
-			this.childFieldName = aChildFieldName;
-			this.fetchChildSql = aFetchSql;
-			this.afterPopulate = aAfterPopulate;
-			this.startThread();
-		}
-
-		public void startThread() throws Exception {
-			start();
-		}
-
-		@Override
-		public void run() {
-			try {
-				if (this.fetchChildSql.isEmpty()) {
-					this.masterObj.getFieldObjectBox(this.childFieldName).fetchAll(this.conn);
-				} else {
-					this.masterObj.getFieldObjectBox(this.childFieldName).fetchByCustomSql(this.conn, this.fetchChildSql);
-				}
-				this.masterObj.getFieldObjectBox(this.childFieldName).resetIterator();
-				while(this.masterObj.getFieldObjectBox(this.childFieldName).hasNext(this.conn)) {
-					Clasz eachObj = this.masterObj.getFieldObjectBox(this.childFieldName).getNext();
-					if (this.afterPopulate != null) this.afterPopulate.execute(eachObj);
-				}
-			} catch (Exception ex) {
-				App.logEror(ex, "Fail thread: " + this.cntrThread[0] + ", when populating value for: " + this.masterObj.getClass().getSimpleName());
-			} finally {
-				decreThreadCount(this.cntrThread);
-				this.dbase.getConnPool().freeConnection(this.conn);
-			}
-		}
-
-		public synchronized void decreThreadCount(Integer[] aCntrThread) {
-			aCntrThread[0]--;
-		}
-	}
-	*/
-
-	public Iterator getIterator() {
+	public Iterator<Entry<Long, Ty>> getIterator() {
 		return iterator;
 	}
 
-	public void setIterator(Iterator iterator) {
+	public void setIterator(Iterator<Entry<Long, Ty>> iterator) {
 		this.iterator = iterator;
 	}
 
@@ -952,7 +799,7 @@ Clasz.StartDebug = false;
 
 	public Long getLargestIndex() throws Exception {
 		Long result = 0L;
-		for (Map.Entry<Long, Clasz> entry : this.getObjectMap().entrySet()) {
+		for (Map.Entry<Long, Ty> entry : this.getObjectMap().entrySet()) {
 			Long keySeq = entry.getKey();
 			if (keySeq.compareTo(result) > 0) {
 				result = keySeq;
@@ -986,7 +833,7 @@ Clasz.StartDebug = false;
 	}
 
 	public boolean hasNextByIterator() throws Exception {
-		this.mustFetch();
+		this.mustFetch(); // should remove and assume items already in map? need to check may break other areas
 		if (this.getIterator() == null ) {
 			this.resetIterator();
 		}
@@ -1001,8 +848,8 @@ Clasz.StartDebug = false;
 		return(this.getIterator().hasNext());
 	}
 
-	public Clasz getNext() throws Exception {
-		this.mustFetch();
+	public Ty getNext() throws Exception {
+		this.mustFetch(); // should remove and assume items already in map? need to check may break other areas
 
 		if (this.getKey() == null ) {
 			this.setKey(-1L);
@@ -1011,29 +858,29 @@ Clasz.StartDebug = false;
 		Long largestIndex = this.getLargestIndex();
 		while (this.getKey().compareTo(largestIndex) <= 0) {
 			this.setKey(this.getKey() + 1);
-			Clasz result = this.getObjectMap().get(this.getKey());
+			Ty result = this.getObjectMap().get(this.getKey());
 			if (result != null) {
 				return(result);
 			} else {
 				this.setKey(this.getKey() + 1);
 			}
 		}
-		throw new Hinderance("Error, already at the end of iteration, field: " + this.getFieldName() + ", key: " + this.getKey());
+		throw new Hinderance("Error, already at the end of iteration, field: " + this.getDbFieldName() + ", key: " + this.getKey());
 	}
 
-	public Clasz getNextByIterator() throws Exception {
-		this.mustFetch();
+	public Ty getNextByIterator() throws Exception {
+		this.mustFetch(); // should remove and assume items already in map? need to check may break other areas
 
 		if (this.getIterator() == null ) {
 			this.resetIterator();
 		}
 
 		if (this.getIterator().hasNext()) {
-			Map.Entry<Long, Clasz> mapEntry = (Map.Entry) this.getIterator().next();
+			Map.Entry<Long, Ty> mapEntry = this.getIterator().next();
 			this.setKey(mapEntry.getKey());
-			return((Clasz) mapEntry.getValue());
+			return(mapEntry.getValue());
 		} else {
-			throw new Hinderance("Error, already at the end of iteration, field: " + this.getFieldName());
+			throw new Hinderance("Error, already at the end of iteration, field: " + this.getDbFieldName());
 		}
 	}
 
@@ -1042,7 +889,7 @@ Clasz.StartDebug = false;
 	}
 
 	public Long getKey() throws Exception {
-		this.mustFetch();
+		this.mustFetch(); // should remove and assume items already in map? need to check may break other areas
 
 		return(this.key);
 	}
@@ -1062,15 +909,15 @@ Clasz.StartDebug = false;
 	}
 
 	public void remove(Long aKey) throws Exception {
-		this.mustFetch();
+		this.mustFetch(); // should remove and assume items already in map? need to check may break other areas
 		this.getObjectMap().remove(aKey);
 	}
 
-	public void remove(Clasz aToRemove) throws Exception {
-		Set<Entry<Long, Clasz>> entrySet = this.getObjectMap().entrySet();
-		for (Iterator iterateClasz = entrySet.iterator(); iterateClasz.hasNext();) {
-			Entry<Long, Clasz> entry = (Entry<Long, Clasz>) iterateClasz.next();
-			Clasz value = entry.getValue();
+	public void remove(Ty aToRemove) throws Exception {
+		Set<Entry<Long, Ty>> entrySet = this.getObjectMap().entrySet();
+		for (Iterator<Entry<Long, Ty>> iterateClasz = entrySet.iterator(); iterateClasz.hasNext();) {
+			Entry<Long, Ty> entry = iterateClasz.next();
+			Ty value = entry.getValue();
 			if(value == aToRemove) {
 				iterateClasz.remove(); //Removing Entry from map
 				break;
@@ -1078,13 +925,13 @@ Clasz.StartDebug = false;
 		}
 	}
 
-	public Clasz getValue(Long aIndex) throws Exception {
-		this.mustFetch();
+	public Ty getValue(Long aIndex) throws Exception {
+		this.mustFetch(); // should remove and assume items already in map? need to check may break other areas
 		return(this.getObjectMap().get(aIndex));
 	}
 	
 	public boolean containsKey(Long aIndex) throws Exception {
-		this.mustFetch();
+		this.mustFetch(); // should remove and assume items already in map? need to check may break other areas
 
 		if (this.getObjectMap().containsKey(aIndex)) {
 			return (true);
@@ -1096,7 +943,7 @@ Clasz.StartDebug = false;
 		if (this.getFetchStatus() == FetchStatus.SOF && this.isModified() == false) { // SOF mean there's no attempt to Fetch from db at all, if this field is modified...
 			Connection conn = this.getMasterObject().getDb().getConnPool().getConnection();
 			try {
-				this.mustFetch(conn);
+				this.mustFetch(conn); // should remove and assume items already in map? need to check may break other areas
 			} finally {
 				if (conn != null) {
 					this.getMasterObject().getDb().getConnPool().freeConnection(conn);
@@ -1113,40 +960,57 @@ Clasz.StartDebug = false;
 		}
 	}
 	
-	private static Map<Long, Clasz> SortByComparator(Map<Long, Clasz> unsortMap) throws Exception {
-		List<Map.Entry<Long, Clasz>> list = new LinkedList<>(unsortMap.entrySet()); // Convert Map to List
+	private static <Ty extends Clasz<?>> Map<Long, Ty> SortByComparator(Map<Long, Ty> unsortMap) throws Exception {
+		List<Map.Entry<Long, Ty>> list = new LinkedList<>(unsortMap.entrySet()); // Convert Map to List
  
 		// Sort list with comparator, to compare the Map values
-		Collections.sort(list, (Map.Entry<Long, Clasz> o1, Map.Entry<Long, Clasz> o2) -> (o1.getValue()).compareTo(o2.getValue()));
+		Collections.sort(list, (Map.Entry<Long, Ty> o1, Map.Entry<Long, Ty> o2) -> (o1.getValue()).compareTo(o2.getValue()));
  
 		// Convert sorted map back to a Map
 		Long cntr = 0L;
-		Map<Long, Clasz> sortedMap = new LinkedHashMap<>();
-		for (Map.Entry<Long, Clasz> entry : list) {
+		Map<Long, Ty> sortedMap = new LinkedHashMap<>();
+		for (Map.Entry<Long, Ty> entry : list) {
 			sortedMap.put(cntr++, entry.getValue());
 		}
 		return(sortedMap);
 	}
 
-	public Clasz addObject(Connection aConn, Class aClass) throws Exception {
-		Clasz clasz = (Clasz) ObjectBase.CreateObject(aConn, aClass);
-		this.addValueObject((Clasz) clasz);
+	public Ty addObject(Connection aConn, Class<Ty> aClass) throws Exception {
+		Ty clasz = ObjectBase.CreateObject(aConn, aClass);
+		this.addValueObject(clasz);
 		return(clasz);
 	}
 
-	public Clasz getFirstMember() throws Exception {
+	public Ty getFirstMember() throws Exception {
 		return(this.objectMap.get(0L));
 	}
 
-	public Clasz fetchFirstMember(Connection aConn, Clasz aCriteria) throws Exception {
-		List<Clasz> result = new CopyOnWriteArrayList<>();
-		this.forEachMember(aConn, ((Connection bConn, Clasz aClasz) -> { // uses for each member will ensure we fetched the right polymorphic member
-			if (aCriteria.equalsCriteria(bConn, aClasz)) {
-				result.add(aClasz);
-				return(false);
+	public boolean gotMember(Connection aConn) throws Exception {
+		LambdaGeneric<Boolean> result = new LambdaGeneric<>(false);
+		this.forEachMember(aConn, (Connection bConn, Ty aClasz) -> { // uses for each member will ensure we fetched the right polymorphic member
+			result.setValue(true);
+			return(false);
+		});
+		
+		return result.getValue();
+	}
+
+	public Ty fetchFirstMember(Connection aConn, Ty aCriteria) throws Exception {
+		List<Ty> result = new CopyOnWriteArrayList<>();
+		// uses for each member will ensure we fetched the right polymorphic member
+		this.forEachMember(aConn, (Connection bConn, Ty aClasz) -> { 
+			try {
+				if (aCriteria.equalsCriteria(bConn, aClasz)) {
+					result.add((Ty) aClasz);
+					return(false);
+				}
+				return(true);
+			} catch(Exception ex) {
+				//App.logEror(ex, "Fail, exception thrown in FieldObjectBox.fetchFirsMember method.");
+				//return false ; // discontinue and get out
+				throw new Hinderance(ex, "Fail, exception thrown in FieldObjectBox.fetchFirsMember method.");
 			}
-			return(true);
-		}));
+		});
 		
 		if (result.size() > 0) {
 			return(result.get(0));
@@ -1155,20 +1019,21 @@ Clasz.StartDebug = false;
 		}
 	}
 
-	public Clasz fetchUniqueMember(Connection aConn, Clasz aCriteria, String aIndexName) throws Exception {
-		Clasz theMember = null;
+	@SuppressWarnings("unchecked")
+	public Ty fetchUniqueMember(Connection aConn, Ty aCriteria, String aIndexName) throws Exception {
+		Ty theMember = null;
 		Table oiTable = new Table(aIndexName);
 		oiTable.initMeta(aConn);
 		//List<Field> indexedField = ObjectIndex.GetIndexedField(aConn, this.getMasterObject()); // get the indexed field of this master object
 		List<Field> indexField = new CopyOnWriteArrayList<>();
-		String whereClause = ObjectIndex.GetIndexWhereCriteria(aIndexName, this.getFieldName(), aCriteria, indexField);
-		Class fieldClass = Class.forName(this.getDeclareType());
+		String whereClause = ObjectIndex.GetIndexWhereCriteria(aConn, aIndexName, this.getDbFieldName(), aCriteria, indexField);
+		Class<Ty> fieldClass = (Class<Ty>) Class.forName(this.getDeclareType());
 		String sqlStr = SqlStrOfObjectIndex(fieldClass, aIndexName, whereClause, "", this, this.getMasterObject());
 		PreparedStatement stmt = null; 
 		ResultSet rs = null;
 		try {
 			stmt = aConn.prepareStatement(sqlStr);
-			Database.SetStmtValue(stmt, indexField);
+			Database.SetStmtValue(aConn, stmt, indexField);
 			rs = stmt.executeQuery();
 			int cntr = 0;
 			while (rs.next()) {
@@ -1177,12 +1042,12 @@ Clasz.StartDebug = false;
 					throw new Hinderance("Fetching object for unique member return non unique result: " + this.getClass().getSimpleName() + ", index: " + aIndexName);
 				}
 				long pk = rs.getLong(1);
-				Class leafClass = fieldClass;
+				Class<Ty> leafClass = fieldClass;
 				String polymorphicName = rs.getString(2);
 				if (polymorphicName != null && polymorphicName.isEmpty() == false) {
-					leafClass = Class.forName(polymorphicName); // if its a polymorphic member field, get its polymorphic class name
+					leafClass = (Class<Ty>) Class.forName(polymorphicName); // if its a polymorphic member field, get its polymorphic class name
 				}
-				theMember = Clasz.fetchObjectByPk(this.getMasterObject().getDb(), aConn, leafClass, pk);
+				theMember = (Ty) Clasz.FetchObjectByPk(aConn, leafClass, pk);
 			}
 		} catch (Exception ex) {
 			if (stmt != null) {
@@ -1200,89 +1065,175 @@ Clasz.StartDebug = false;
 		}
 		return(theMember);
 	}
-
-	public FetchStatus searchBySection(Connection aConn, String aPageDirection, String aSortField, String aSortValue, String aIndexName, String searchCriteria) throws Exception {
-		return(this.fetchBySection(aConn, aPageDirection, aSortField, aSortValue, aIndexName, searchCriteria));
-	}
-
-	private static void GetSectionWhereClause(Connection aConn, List<String> aResult, String aIndexName, String aSortField, String aSortValue, SortOrder aDisplayOrder, String aPageDirection) throws Exception {
-		if (aDisplayOrder == SortOrder.DSC) {
-			if (aPageDirection.equals("next")) { // reverse the direction if display by descending order
-				aPageDirection = "prev";
-			} else {
-				aPageDirection = "next";
-			}
+	
+	private static List<Object> SqlPagingForObjectIndex(Connection aConn, String aIndexName, List<String> aKeyField, List<String> aKeyValue, List<SortOrder> aKeyOrder, String aPageDirection) throws Exception {
+		if (aKeyField.size() != aKeyValue.size()) {
+			throw new Hinderance("When SqlPagingForObjectIndex, its total key clasz, key field and key value must be the same!");
 		}
 
-		String whereClause = "";
-		String sortOrder = "asc";
-		Table oiTable = new Table(aIndexName);
-		oiTable.initMeta(aConn);
-		Field keyField = oiTable.getField(aSortField);
-		if (aSortValue == null || aSortValue.trim().isEmpty()) aSortValue = null;  // for empty or null value, there'll be no where range clause
-		if (keyField.getFieldType() == FieldType.STRING) {
-			if (aPageDirection.equals("next")) {
-				if (aSortValue != null) whereClause += "lower(" + aSortField + ") >= lower('" + aSortValue + "')";
-				sortOrder = "asc";
-			} else if (aPageDirection.equals("prev")) {
-				if (aSortValue != null) whereClause += "lower(" + aSortField + ") <= lower('" + aSortValue + "')";
-				sortOrder = "desc";
-			} else if (aPageDirection.equals("first")) {
-				sortOrder = "asc";
-			} else if (aPageDirection.equals("last")) {
-				sortOrder = "desc";
-			}
-		} else if (keyField.getFieldType() == FieldType.DATETIME || keyField.getFieldType() == FieldType.DATE) {
-			if (aPageDirection.equals("next")) {
-				if (aSortValue != null) whereClause += aSortField + " >= ?";
-				sortOrder = "asc";
-			} else if (aPageDirection.equals("prev")) {
-				if (aSortValue != null) whereClause += aSortField + " <= ?";
-				sortOrder = "desc";
-			} else if (aPageDirection.equals("first")) {
-				sortOrder = "asc";
-			} else if (aPageDirection.equals("last")) {
-				sortOrder = "desc";
-			}
-		} else {
-			throw new Hinderance("The field type in object index: " + aIndexName + ", type: " + keyField.getFieldType() + ", is not supported!");
-		}
+		List<String> sameOrderKeyField = new CopyOnWriteArrayList<>();
+		List<String> sameOrderKeyValue = new CopyOnWriteArrayList<>();
+		List<SortOrder> sameOrderKeyOrder = new CopyOnWriteArrayList<>();
 
-		aResult.clear();
-		aResult.add(whereClause);
-		aResult.add(sortOrder);
-	}
+		String resultWhereExpression = "";
+		String resultSortOrder = "";
+		String firstSetWhereExpression = "";
+		int sortOrderBatchCntr = 0;
+		boolean allValueIsEmpty = true;
+		for(int cntrSort = 0; cntrSort < aKeyOrder.size(); cntrSort++) {
+			SortOrder currentSortOrder = aKeyOrder.get(cntrSort);
+			SortOrder nextSortOrder = null;
+			if (cntrSort + 1 < aKeyOrder.size()) {
+				nextSortOrder = aKeyOrder.get(cntrSort + 1);
+			}
 
-	private static void SetStmtDateValue(PreparedStatement stmt, LambdaCounter aFieldPosition, String whereClause, Field keyField, String aSortValue) throws Exception {
-		if (aSortValue == null || aSortValue.trim().isEmpty()) aSortValue = null;  // for empty or null value, there'll be no where range clause
-		if (aSortValue != null) {
-			if ((keyField.getFieldType() == FieldType.DATETIME || keyField.getFieldType() == FieldType.DATE) && whereClause.isEmpty() == false) {
-				java.sql.Timestamp dateValue;
-				Field fieldDt = (Field) keyField;
-				fieldDt.setValueStr(aSortValue);
-				String dbDate;
-				if (fieldDt instanceof FieldDateTime) {
-					dbDate = DateAndTime.FormatForJdbcTimestamp(((FieldDateTime) fieldDt).getValueDateTime());
-				} else { // this is instance of FieldDate with no time
-					FieldDate castedDate = (FieldDate) fieldDt;
-					DateTime dateNoTime = castedDate.getValueDate();
-					//DateTime endOfDay = DateAndTime.GetDayEnd(dateNoTime);
-					DateTime endOfDay = DateAndTime.GetDayStart(dateNoTime);
-					dbDate = DateAndTime.FormatForJdbcTimestamp(endOfDay);
+			sameOrderKeyField.add(aKeyField.get(cntrSort));
+			sameOrderKeyValue.add(aKeyValue.get(cntrSort));
+			sameOrderKeyOrder.add(aKeyOrder.get(cntrSort));
+
+			// different sort order, start getting the sql
+			if (nextSortOrder == null || currentSortOrder.equals(nextSortOrder) == false) { 
+				List<Object> sameSortOrder = GetSqlPagingForObjectIndex(aConn, aIndexName, sameOrderKeyField, sameOrderKeyValue, sameOrderKeyOrder, aPageDirection);
+				String strWhereExpression = ((String) sameSortOrder.get(0)).trim();
+				String strSortOrder = ((String) sameSortOrder.get(1)).trim();
+				boolean isEmptyValue = (boolean) sameSortOrder.get(2);
+				if (isEmptyValue == false) allValueIsEmpty = false; 
+
+				// no equal for last where str to ensure fetch is next haven't display record
+				if (cntrSort == aKeyOrder.size() - 1 && aPageDirection.equals("seek") == false) {
+					strWhereExpression = strWhereExpression.replaceAll(">=", ">");
+					strWhereExpression = strWhereExpression.replaceAll("<=", "<");
 				}
-				dateValue = java.sql.Timestamp.valueOf(dbDate); // format must be in "2005-04-06 09:01:10"
-				Integer fieldPosition = aFieldPosition.getCntr();
-				stmt.setTimestamp(fieldPosition, dateValue);
-				aFieldPosition.increment();
+
+				// after doing set section, need to or into set with primary key set and no other keys set
+				if (sortOrderBatchCntr == 0) {
+					firstSetWhereExpression = strWhereExpression;
+					if (aPageDirection.equals("seek") == false) {
+						firstSetWhereExpression = firstSetWhereExpression.replaceAll(">=", ">");
+						firstSetWhereExpression = firstSetWhereExpression.replaceAll("<=", "<");
+					}
+				} 
+
+				// place there where and sort clause into result
+				if (strWhereExpression.isEmpty() == false) {
+					if (resultWhereExpression.isEmpty() == false) resultWhereExpression += " and ";
+					resultWhereExpression += strWhereExpression;
+				}
+				if (strSortOrder.isEmpty() == false) {
+					if (resultSortOrder.isEmpty() == false) resultSortOrder += ", ";
+					resultSortOrder += strSortOrder;
+				}
+
+				// start with new sort batch
+				sortOrderBatchCntr++;
+				sameOrderKeyField.clear();
+				sameOrderKeyValue.clear();
+				sameOrderKeyOrder.clear();
 			}
 		}
+
+		if (allValueIsEmpty == true) {
+			resultWhereExpression = "";
+		} else {
+			resultWhereExpression = "(" + resultWhereExpression + ")" + " or " + "(" + firstSetWhereExpression + ")";
+		}
+
+		List<Object> result = new CopyOnWriteArrayList<>();
+		result.add(resultWhereExpression);
+		result.add(resultSortOrder);
+		return result;
 	}
 
-	private static void FetchMemberOfBoxSpawner(Connection aConn, List<Thread> threadPool, Clasz aMasterObj, FieldObjectBox aFieldBox, Integer[] cntrThreadPassAsRef, Class leafClass, long pk) throws Exception {
+	private static List<Object> GetSqlPagingForObjectIndex(Connection aConn, String aIndexName, List<String> aKeyField, List<String> aKeyValue, List<SortOrder> aSortOrder, String aPageDirection) throws Exception {
+		String concatFieldName = "";
+		String concatFieldValue = "";
+		String strOrder = "";
+
+		String objectIndexTableName = aIndexName.toLowerCase();
+		Table objectIndexTable = new Table(objectIndexTableName);
+		objectIndexTable.initMeta(aConn);
+		for(int cntrField = 0; cntrField < aKeyField.size(); cntrField++) {
+			String keyName = aKeyField.get(cntrField).toLowerCase();
+			String keyValue = aKeyValue.get(cntrField);
+			SortOrder sortOrder = aSortOrder.get(cntrField);
+			if (keyValue == null) keyValue = "";
+
+			// concat field, concat value
+			if (concatFieldName.isEmpty() == false) {
+				if (Database.GetDbType(aConn) == DbType.MYSQL) {
+					concatFieldName += ", ";
+				} else {
+					concatFieldName += " || ";
+				}
+			}
+			//if (concatFieldValue.isEmpty() == false) concatFieldValue += " ";
+
+			// pad column and value according to field type
+			Field keyField = objectIndexTable.getField(keyName);
+			if (keyField.getDbFieldType() == FieldType.DATETIME) {
+				String dateForSort = DateAndTime.FormatDateTimeForSort(keyValue);
+				concatFieldValue += dateForSort;
+				concatFieldName += Database.DateTimeForSort(aConn, objectIndexTableName + "." + keyName);
+			} else if (keyField.getDbFieldType() == FieldType.DATE) {
+				String dateForSort = DateAndTime.FormatDateForSort(keyValue);
+				concatFieldValue += dateForSort;
+				concatFieldName += Database.DateForSort(aConn, objectIndexTableName + "." + keyName);
+			} else if (keyField.getDbFieldType() == FieldType.INTEGER || keyField.getDbFieldType() == FieldType.LONG) {
+				String digitForSort = Generic.PadDigitForSort(keyValue);
+				concatFieldValue += digitForSort;
+				String sqlDigit2Str = Database.Num2StrSql(aConn, objectIndexTableName + "." + keyName);
+				concatFieldName += Database.LeftPadSql(aConn, sqlDigit2Str, digitForSort.length(), " ");
+			} else if (keyField.getDbFieldType() == FieldType.FLOAT) {
+				String digitForSort = Generic.PadFloatForSort(keyValue);
+				concatFieldValue += digitForSort;
+				String sqlDigit2Str = Database.Float2StrSql(aConn, objectIndexTableName + "." + keyName);
+				concatFieldName += Database.LeftPadSql(aConn, sqlDigit2Str, digitForSort.length(), " ");
+			} else {
+				String strForSort = Generic.PadStrForSort(keyValue.toLowerCase(), keyField.getFieldSize());
+				concatFieldValue += strForSort;
+				concatFieldName += Database.RightPadSql(aConn, objectIndexTableName + "." + keyName, strForSort.length(), " ");
+			}
+
+			// handle sort order
+			SortOrder newSortOrder = sortOrder;
+			if (aPageDirection.equals("prev")) {
+				newSortOrder = SortOrder.ReverseOrder(sortOrder);
+			} 
+			if (strOrder.isEmpty() == false) strOrder += ", ";
+			strOrder += objectIndexTableName + "." + keyName + " " + SortOrder.AsString(newSortOrder);
+		}
+
+		if (concatFieldName.isEmpty() == false && aKeyField.size() == 1) {
+			if (Database.GetDbType(aConn) == DbType.MYSQL) {
+				concatFieldName += ", ''";
+			} else {
+				concatFieldName += " || ''";
+			}
+		}
+
+		// for mysql only
+		if (concatFieldName.isEmpty() == false) {
+			if (Database.GetDbType(aConn) == DbType.MYSQL) {
+				concatFieldName = "concat(" + concatFieldName + ")";
+			}
+		}
+
+		SortOrder primarySortOrder = aSortOrder.get(0);
+		String strWhereExpression = Clasz.GetPagingCondition(concatFieldName, concatFieldValue, primarySortOrder, aPageDirection);
+
+		List<Object> result = new CopyOnWriteArrayList<>();
+		result.add(strWhereExpression);
+		result.add(strOrder);
+		result.add(concatFieldValue.trim().isEmpty());
+		return result;
+	}
+
+	private static <Ty extends Clasz<?>> void FetchMemberOfBoxSpawner(Connection aConn, List<Thread> threadPool, FieldObjectBox<Ty> aFieldBox, Integer[] cntrThreadPassAsRef, Class<Ty> leafClass, long pk) throws Exception {
 		if (App.getMaxThread() == 1) { // no threading
 			cntrThreadPassAsRef[0]++;
 			App.logDebg(FieldObjectBox.class, "Spawning thread sequentially: " + cntrThreadPassAsRef[0]);
-			(new PopulateMemberObjectThreadPk(cntrThreadPassAsRef, aMasterObj, aConn, aFieldBox, leafClass, pk)).join();
+			//(new PopulateMemberObjectThreadPk(cntrThreadPassAsRef, aMasterObj, aConn, aFieldBox, leafClass, pk)).join();
+			(new PopulateMemberObjectThreadPk<>(cntrThreadPassAsRef, aConn, aFieldBox, leafClass, pk)).join();
 		} else {
 			int cntrAttempt = 0;
 			int maxAttempt = App.MAX_GET_CONNECTION_ATTEMPT;
@@ -1293,19 +1244,20 @@ Clasz.StartDebug = false;
 					conn = aConn.getBaseDb().getConnPool().getConnection(); // here will throw exception from connection pool, if too many attempts
 					if (cntrThreadPassAsRef[0] >= App.getMaxThread()) { 
 						aConn.getBaseDb().getConnPool().freeConnection(conn); 
-						App.ShowThreadingStatus(FieldObjectBox.class, "fetchMemberOfBoxObjectBySection", cntrThreadPassAsRef[0], App.getMaxThread(), cntrAttempt, maxAttempt);
+						App.ShowThreadingStatus(FieldObjectBox.class, "FetchMemberOfBoxSpawner", cntrThreadPassAsRef[0], App.getMaxThread(), cntrAttempt, maxAttempt);
 						Thread.sleep(App.MAX_THREAD_OR_CONN_WAIT); // if no db connection, wait x second and continue the loop
 					} else { 
 						cntrThreadPassAsRef[0]++;
 						App.logDebg(FieldObjectBox.class, "Spawning thread parallelly: " + cntrThreadPassAsRef[0]);
-						Thread theThread = new PopulateMemberObjectThreadPk(cntrThreadPassAsRef, aMasterObj, conn, aFieldBox, leafClass, pk);
+						//Thread theThread = new PopulateMemberObjectThreadPk(cntrThreadPassAsRef, aMasterObj, conn, aFieldBox, leafClass, pk);
+						Thread theThread = new PopulateMemberObjectThreadPk<>(cntrThreadPassAsRef, conn, aFieldBox, leafClass, pk);
 						threadPool.add(theThread);
 						break;
 					}
 				} catch(Exception ex) {
-					App.ShowThreadingStatus(FieldObjectBox.class, "fetchMemberOfBoxObjectBySection", cntrThreadPassAsRef[0], App.getMaxThread(), cntrAttempt, maxAttempt);
+					App.ShowThreadingStatus(FieldObjectBox.class, "FetchMemberOfBoxSpawner", cntrThreadPassAsRef[0], App.getMaxThread(), cntrAttempt, maxAttempt);
 					if (cntrAttempt >= maxAttempt) {
-						throw new Hinderance(ex, "[fetchMemberOfBoxObjectBySection] Give up threading due to insufficent db connection");
+						throw new Hinderance(ex, "[fetchMemberSection] Give up threading due to insufficent db connection");
 					} else {
 						Thread.sleep(App.MAX_THREAD_OR_CONN_WAIT); // wait for other db conn to free up
 					}
@@ -1314,129 +1266,44 @@ Clasz.StartDebug = false;
 		}
 	}
 
-	/*
-		Permutate the where expression as shown in the 2 SQL below:-
+	@SuppressWarnings("unchecked")
+	private FetchStatus fetchSectionByObjectIndex(Connection aConn, Clasz<?> aMasterObj, FieldObjectBox<Ty> aFieldBox, String aPageDirection, int aPageSize
+	, List<String> aSortFieldList, List<String> aSortValueList, List<SortOrder> aSortOrderList, String aIndexName, String aWhereClause) throws Exception {
 
-		select mom_child.generated_payslips, mom_child.leaf_class 
-		from oi_payslip_run_generated_payslips, (
-		select generated_payslips, leaf_class 
-		from iv_payslip_run_generated_payslips 
-		where cz_payslip_run_pk = 39) mom_child 
-		where (mom_child.generated_payslips = oi_payslip_run_generated_payslips.generated_payslips 
-		and oi_payslip_run_generated_payslips.cz_payslip_run_pk = 39 
-		and oi_payslip_run_generated_payslips.generated_payslips_leaf_class = mom_child.leaf_class) 
-		-- start permutating the 2 line below
-		and ((lower(generated_payslips$employee) >= lower('Demo1 Silverston') and generated_payslips$period_from < '2020-07-01 00:00:00+08') 
-		or (lower(generated_payslips$employee) >= lower('Demo1 Silverston') and generated_payslips$period_from < '2020-07-01 00:00:00+08')) 
-		--
-		order by  generated_payslips$employee asc, generated_payslips$period_from desc;
-					 
-		select mom_child.generated_payslips, mom_child.leaf_class 
-		from oi_payslip_run_generated_payslips, (
-		select generated_payslips, leaf_class 
-		from iv_payslip_run_generated_payslips 
-		where cz_payslip_run_pk = 38) mom_child 
-		where (mom_child.generated_payslips = oi_payslip_run_generated_payslips.generated_payslips 
-		and oi_payslip_run_generated_payslips.cz_payslip_run_pk = 38 
-		and oi_payslip_run_generated_payslips.generated_payslips_leaf_class = mom_child.leaf_class) 
-		-- start permutating the 2 line below
-		and ((lower(generated_payslips$employee) >= lower('Demo5 Silverston') and generated_payslips$period_from < '2020-02-01 00:00:00+08')
-		or (lower(generated_payslips$employee) > lower('Demo5 Silverston') and generated_payslips$period_from <= '2020-02-01 00:00:00+08'))
-		--
-		order by  generated_payslips$employee asc, generated_payslips$period_from desc	;	  
-	*/
-	public static String GetWherePermutation(List<String> aEachCondition, int aPosition2UniqueIt) throws Exception {
-		String uniqueableExpression = "";
-		for (int cntr = 0; cntr < aEachCondition.size(); cntr++) {
-			String newWhereSection = aEachCondition.get(cntr);
-			if (newWhereSection != null && newWhereSection.isEmpty() == false) {
-				if (uniqueableExpression.isEmpty() == false) uniqueableExpression += " and ";
-				if (cntr == aPosition2UniqueIt) {
-					newWhereSection = newWhereSection.replaceAll(">=", ">");
-					newWhereSection = newWhereSection.replaceAll("<=", "<");
-				}
-				uniqueableExpression += newWhereSection;
-			}
+		int totalField = aSortFieldList.size();
+		if (aSortValueList.size() != totalField || aSortOrderList.size() != totalField) {
+			throw new Hinderance("[fetchSectionByObjectIndex] The pass in array of fields to sort, its value and its sort key is not the same!");
 		}
-		return(uniqueableExpression);
-	}
 
-	private FetchStatus fetchMemberOfBoxObjectBySection(Connection aConn, Clasz aMasterObj, FieldObjectBox aFieldBox, String aPageDirection, int aPageSize, List<String> aSortFieldList, List<String> aSortValueList, List<SortOrder> aSortOrderList, String aIndexName, String aWhereClause) throws Exception {
 		FetchStatus result = FetchStatus.EOF;
 		PreparedStatement stmt = null;
 		ResultSet rset = null;
 
-		int totalField = aSortFieldList.size();
-		if (aSortValueList.size() != totalField || aSortOrderList.size() != totalField) {
-			throw new Hinderance("[fetchMemberOfBoxObjectBySection] The pass in array of fields to sort, its value and its sort key is not the same!");
-		}
-
 		try {
-			List<String> fieldExpressionList = new CopyOnWriteArrayList<>();
-			List<String> sortFieldList = new CopyOnWriteArrayList<>();
-			for(int cntr = 0; cntr < aSortFieldList.size(); cntr++) {
-				String sortField = aSortFieldList.get(cntr);
-				String sortValue = aSortValueList.get(cntr);
-				SortOrder sortOrder = aSortOrderList.get(cntr);
+			// get sql objects for pagination clause
+			List<Object> keyPageObject = SqlPagingForObjectIndex(aConn, aIndexName, aSortFieldList, aSortValueList, aSortOrderList, aPageDirection); 
+			String whereClause = ((String) keyPageObject.get(0));
+			String sortClause = ((String) keyPageObject.get(1));
 
-				List<String> sectionWhere = new CopyOnWriteArrayList<>();
-				GetSectionWhereClause(aConn, sectionWhere, aIndexName, sortField, sortValue, sortOrder, aPageDirection);
-
-				String newWhereSection = sectionWhere.get(0);
-				String newSortSection = sectionWhere.get(1);
-
-				fieldExpressionList.add(newWhereSection);
-				sortFieldList.add(sortField + " " + newSortSection);
-			}
-
-			List<String> wherePermutationList = new CopyOnWriteArrayList<>();
-			for (int cntr = fieldExpressionList.size() - 1; cntr >= 0; cntr--) {
-				String eachExpression = GetWherePermutation(fieldExpressionList, cntr);
-				wherePermutationList.add(eachExpression);
-			}
-
-			String whereClause = "";
-			for(int cntr = 0; cntr < wherePermutationList.size(); cntr++) {
-				String newWhereSection = wherePermutationList.get(cntr);
-				if (whereClause.isEmpty() == false) whereClause += " or ";
-				if (newWhereSection.isEmpty() == false) whereClause += "(" + newWhereSection + ")";
-			}
-
+			// handle where clause
 			if (whereClause.isEmpty() == false) {
 				whereClause = "(" + whereClause + ")";
 			}
-
 			if (aWhereClause != null && !aWhereClause.isEmpty()) {
 				if (whereClause.isEmpty() == false) whereClause += " and ";
 				whereClause += " " + aWhereClause.trim();
 			}
 
-			String sortClause = "";
-			for (int cntr = 0; cntr < fieldExpressionList.size(); cntr++) {
-				String newSortSection = sortFieldList.get(cntr);
-				if (sortClause.isEmpty() == false) sortClause += ",";
-				sortClause += " " + newSortSection;
-			}
-			
-			Class fieldClass = Class.forName(aFieldBox.getDeclareType());
-			String strSql = SqlStrOfObjectIndex(fieldClass, aIndexName, whereClause, sortClause, aFieldBox, aMasterObj);
-			stmt = aConn.prepareStatement(strSql);
+			// compose the sql for retrieve object index records
+			Class<Ty> fieldClass = (Class<Ty>) Class.forName(aFieldBox.getDeclareType());
+			String strSqlObjectIndex = SqlStrOfObjectIndex(fieldClass, aIndexName, whereClause, sortClause, aFieldBox, aMasterObj);
+			stmt = aConn.prepareStatement(strSqlObjectIndex);
 
 			Table oiTable = new Table(aIndexName);
 			oiTable.initMeta(aConn);
-			LambdaCounter dateFieldPosition = new LambdaCounter();
-			dateFieldPosition.setCntr(1);
-			for(int cntrExpr = 0; cntrExpr < wherePermutationList.size(); cntrExpr++) {
-				for(int cntr = 0; cntr < aSortFieldList.size(); cntr++) {
-					String sortField = aSortFieldList.get(cntr);
-					String sortValue = aSortValueList.get(cntr);
 
-					Field keyField = oiTable.getField(sortField);
-					SetStmtDateValue(stmt, dateFieldPosition, whereClause, keyField, sortValue);
-				}
-			}
 			rset = stmt.executeQuery();
-			App.logDebg(this, "ObjectIndex sql: " + stmt.toString());
+			//App.logDebg(this, "ObjectIndex sql: " + stmt.toString());
 			aFieldBox.getObjectMap().clear();
 			int cntrRow = 0;
 			Integer[] cntrThreadPassAsRef = {0};
@@ -1446,14 +1313,14 @@ Clasz.StartDebug = false;
 				if (cntrRow < aPageSize) {
 					cntrRow++;
 					long pk = rset.getLong(1);
-					Class leafClass = fieldClass;
+					Class<Ty> leafClass = fieldClass;
 					String polymorphicName = rset.getString(2);
 					if (polymorphicName != null && polymorphicName.isEmpty() == false) {
-						leafClass = Class.forName(polymorphicName); // if its a polymorphic member field, get its polymorphic class name
+						leafClass = (Class<Ty>) Class.forName(polymorphicName); // if its a polymorphic member field, get its polymorphic class name
 					}
 
 					// can refactor as a spawner pattern in future
-					FetchMemberOfBoxSpawner(aConn, threadPool, aMasterObj, aFieldBox, cntrThreadPassAsRef, leafClass, pk);
+					FetchMemberOfBoxSpawner(aConn, threadPool, aFieldBox, cntrThreadPassAsRef, leafClass, pk);
 
 					result = FetchStatus.EOF;
 				} else {
@@ -1483,9 +1350,9 @@ Clasz.StartDebug = false;
 			App.logDebg(this, "Completed all PopulateMemberObjectThreadPk");
 		} catch (Exception ex) {
 			if (stmt == null) {
-				throw new Hinderance(ex, "fetchMemberOfBoxObjectBySection - [" + aIndexName + "], fail to populate object array: null");
+				throw new Hinderance(ex, "fetchSectionByObjectIndex - [" + aIndexName + "], fail to populate object array: null");
 			} else {
-				throw new Hinderance(ex, "fetchMemberOfBoxObjectBySection - [" + aIndexName + "], fail to populate object array: " + stmt.toString());
+				throw new Hinderance(ex, "fetchSectionByObjectIndex - [" + aIndexName + "], fail to populate object array: " + stmt.toString());
 			}
 		} finally {
 			if (rset != null) {
@@ -1503,10 +1370,10 @@ Clasz.StartDebug = false;
 		MarkMemberFieldForRemove(aConn, this, aFieldName);
 	}
 
-	public static void MarkMemberFieldForRemove(Connection aConn, FieldObjectBox aFob, String aFieldName) throws Exception {
+	public static <Ty extends Clasz<?>> void MarkMemberFieldForRemove(Connection aConn, FieldObjectBox<Ty> aFob, String aFieldName) throws Exception {
 		aFob.resetIterator();
 		while (aFob.hasNext(aConn)) {
-			Clasz eachClasz = aFob.getNext();
+			Ty eachClasz = aFob.getNext();
 			eachClasz.getField(aFieldName).forRemove(true);
 		}
 	}
@@ -1515,10 +1382,10 @@ Clasz.StartDebug = false;
 		MarkAllMemberFieldForKeep(aConn, this);
 	}
 
-	public static void MarkAllMemberFieldForKeep(Connection aConn, FieldObjectBox aFob) throws Exception {
+	public static <Ty extends Clasz<?>> void MarkAllMemberFieldForKeep(Connection aConn, FieldObjectBox<Ty> aFob) throws Exception {
 		aFob.resetIterator(); 
 		while(aFob.hasNext(aConn)) {
-			Clasz eachClasz = aFob.getNext();
+			Ty eachClasz = aFob.getNext();
 			eachClasz.markAllFieldForKeep();
 		}
 	}
@@ -1527,10 +1394,10 @@ Clasz.StartDebug = false;
 		RemoveMarkMemberField(aConn, this);
 	}
 
-	public static void RemoveMarkMemberField(Connection aConn, FieldObjectBox aFob) throws Exception {
+	public static <Ty extends Clasz<?>> void RemoveMarkMemberField(Connection aConn, FieldObjectBox<Ty> aFob) throws Exception {
 		aFob.resetIterator(); 
 		while(aFob.hasNext(aConn)) {
-			Clasz eachClasz = aFob.getNext();
+			Ty eachClasz = aFob.getNext();
 			eachClasz.removeMarkField();
 		}
 	}
@@ -1548,7 +1415,7 @@ Clasz.StartDebug = false;
 	 * @param aLinkField
 	 * @throws Exception
 	 */
-	public static void CreateBoxMemberTable(Connection aConn, Class aParent, String aLinkField) throws Exception {
+	public static void CreateBoxMemberTable(Connection aConn, Class<?> aParent, String aLinkField) throws Exception {
 		String relationType = Clasz.GetIwTableName(aParent, aLinkField);
 		Table linkTable = new Table(relationType);
 		if (Database.TableExist(aConn, relationType) == false) {
@@ -1571,12 +1438,70 @@ Clasz.StartDebug = false;
 		}
 	}
 
-	public void renameBoxMemberUniqueIndex(Connection aConn, Class aParent, String aNewClassName) throws Exception {
-		String oldTableName = Clasz.GetIwTableName(aParent, this.getFieldName());
-		String newTableName = Clasz.GetIwTableName(aNewClassName, this.getFieldName());
+	public void renameBoxMemberUniqueIndex(Connection aConn, Class<?> aParent, String aNewClassName) throws Exception {
+		String oldTableName = Clasz.GetIwTableName(aParent, this.getDbFieldName());
+		String newTableName = Clasz.GetIwTableName(aNewClassName, this.getDbFieldName());
 		Table linkTable = new Table(oldTableName);
 		String oldIndexName = linkTable.getIndexName() + "_unq";
 		String newIndexName = newTableName + "_unq";
 		Database.AlterTableRenameIndex(aConn, linkTable.getTableName(), oldIndexName, newIndexName);
+	}
+
+	public FetchStatus fetchBySection(Connection aConn, String aKeyField, String aKeyValue, SortOrder aSortOrder, String aPageDirection, int aPageSize) throws Exception {
+		List<String> keyField = new CopyOnWriteArrayList<>();
+		keyField.add(aKeyField);
+
+		List<String> keyValue = new CopyOnWriteArrayList<>();
+		keyValue.add(aKeyValue); 
+
+		List<SortOrder> orderList = new CopyOnWriteArrayList<>();
+		orderList.add(aSortOrder);
+
+		return this.fetchBySection(aConn, keyField, keyValue, orderList, aPageDirection, aPageSize);
+	}
+
+	@SuppressWarnings("unchecked")
+	public FetchStatus fetchBySection(Connection aConn, List<String> aKeyField, List<String> aKeyValue, List<SortOrder> aSortOrder, String aPageDirection, int aPageSize) throws Exception {
+		if (this.isInline()) {
+			throw new Hinderance("Fob fetchBySection cannot be use for inline fob field: " + this.getMasterClassSimpleName() + "." + this.getCamelCaseName());
+		}
+
+		Multimap<String, Record> whereBox = Multimaps.synchronizedListMultimap(ArrayListMultimap.create());
+		String iwBoxTableName = Clasz.GetIwTableName(this);
+		Record linkIwBox2Member = new Record();
+		linkIwBox2Member.createField(this.getDbFieldName(), "");
+		String memberTableName = Clasz.CreateTableName(this.getMemberClass());
+		String memberPkName = Clasz.CreatePkColName(this.getMemberClass());
+		linkIwBox2Member.getField(this.getDbFieldName()).setFormulaStr(iwBoxTableName + "." + this.getDbFieldName() + " = " + memberTableName + "." + memberPkName);
+		whereBox.put(iwBoxTableName, linkIwBox2Member);
+
+		Record linkParent2Member = new Record();
+		String parentPkName = Clasz.CreatePkColName(this.getMasterClass());
+		linkParent2Member.createField(parentPkName, this.getMasterObject().getObjectId());
+		whereBox.put(iwBoxTableName, linkParent2Member);
+
+		Class<Ty> memberClass = (Class<Ty>) this.getMemberClass();
+		this.removeAll();
+		FieldObjectBox<Ty> fobResult = this;
+		FetchStatus result;
+		if (this.isPolymorphic() == false) {
+			result = Clasz.FetchBySection(aConn, memberClass, aKeyField, aKeyValue, aSortOrder, whereBox, fobResult, aPageDirection, aPageSize, null);
+		} else {
+			result = Clasz.FetchBySection(aConn, memberClass, aKeyField, aKeyValue, aSortOrder, whereBox, fobResult, aPageDirection, aPageSize, (Connection bConn, ResultSet aRs) -> {
+				// get the memberClass oid and polymorphic class type and fetch the object directly from member cz table
+				Long oid = aRs.getLong(this.getDbFieldName());
+				String leafClassName = aRs.getString(ObjectBase.LEAF_CLASS);
+				Class<Ty> leafClass = (Class<Ty>) Class.forName(leafClassName);
+				Ty clasz = ObjectBase.CreateObject(bConn, (Class<Ty>) leafClass);
+				clasz.setObjectId(oid);
+				if (clasz.populate(bConn)) {
+					fobResult.addValueObject(clasz);
+				} else {
+					throw new Hinderance("Fail to populate during fetchBySection, class: " + leafClass + ", oid: " + oid);
+				}
+				return(true);
+			});
+		}
+		return(result);
 	}
 }
